[po] update all po files Thanks to @teamblue-e2

--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -482,7 +482,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Текущи настройки:"
 
 msgid "(empty)"
@@ -497,6 +497,9 @@ msgstr "(покажи DVD аудио меню)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "непознат"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* На разположение само ако е активен повече от един интерфейс."
@@ -1854,8 +1857,15 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr ""
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr ""
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "разрешен"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2894,6 +2904,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "копиране в букет"
 
+msgid "Copying files"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Скорост на превъртане"
@@ -3398,6 +3411,10 @@ msgstr "Неуспешно изтриване!"
 
 msgid "Deleted items"
 msgstr ""
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Неуспешно изтриване!"
 
 msgid "Denmark"
 msgstr ""
@@ -3970,10 +3987,6 @@ msgstr "Тунер конфигурация"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Грешка при сканиране (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Изток"
@@ -5429,6 +5442,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Запис"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "Не се поддържа"
@@ -5516,6 +5532,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -5963,6 +5982,14 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Инсталиране"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Въведи Таймер"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7076,6 +7103,10 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Завърти на изток"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Завърти на изток"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -8103,6 +8134,10 @@ msgstr ""
 
 msgid "Pilot"
 msgstr ""
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Разреши много букети"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9148,6 +9183,10 @@ msgstr "Канали"
 msgid "Reload blacklists"
 msgstr "Презареди черен/бял списък"
 
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Канали"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -10046,6 +10085,10 @@ msgid "Select OPKG source....."
 msgstr "Изберете филм"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Премахни заглавие"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Актуализация на Софтуера"
 
@@ -10203,7 +10246,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Добавете канал..."
+
 msgid "Select service to add..."
+msgstr "Добавете канал..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Добавете канал..."
 
 #, fuzzy
@@ -10212,6 +10263,14 @@ msgstr "Избери"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Избери"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Актуализация на Софтуера"
 
 msgid "Select target folder"
 msgstr ""
@@ -10265,6 +10324,9 @@ msgid "Select the shifted character set"
 msgstr ""
 
 msgid "Select the shifted character set for the next character only"
+msgstr ""
+
+msgid "Select the timer from the fallback tuner by default"
 msgstr ""
 
 msgid "Select the tuner that controls the motorised dish."
@@ -10407,6 +10469,14 @@ msgstr "Канали"
 
 #, fuzzy
 msgid "Service ID"
+msgstr "Канали"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Канали"
+
+#, fuzzy
+msgid "Service Type"
 msgstr "Канали"
 
 #, fuzzy
@@ -11674,6 +11744,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Продължи"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Въведете отново новия ПИН"
+
 msgid "Stream request"
 msgstr ""
 
@@ -12277,6 +12355,9 @@ msgid "There are at least %d updates available."
 msgstr "Има %d достъпни актуализации."
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #, fuzzy
@@ -13099,6 +13180,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Разреши много букети"
+
 msgid "Unsupported"
 msgstr "Не се поддържа"
 
@@ -13221,6 +13306,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Използвай шлюз"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "добави алтернативи"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13258,6 +13347,10 @@ msgstr "Използвай мерител на напрежение"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Възстановяване backups"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "добави алтернативи"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -13777,6 +13870,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -14843,6 +14939,9 @@ msgstr ""
 msgid "extensions"
 msgstr "Управление на пакети"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -14939,6 +15038,9 @@ msgstr "запиши кадъра като bitmap"
 msgid "green"
 msgstr "зелен"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -14953,6 +15055,9 @@ msgid "help..."
 msgstr "помощ..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -15701,6 +15806,10 @@ msgstr "вертикална"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "изчакай за mmi..."
 
 msgid "wait for mmi..."
 msgstr "изчакай за mmi..."
