--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -512,7 +512,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "aktiver den aktuelle opsætning"
 
 msgid "(empty)"
@@ -529,6 +529,9 @@ msgstr "(Vis ekstra DVD lyd menu)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "ukendt"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2138,9 +2141,17 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "CA Modul"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "CI  tildeling"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "Tilsluttet"
 
 #
 #, fuzzy
@@ -3328,6 +3339,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "kopier til pakker"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Kopier"
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3925,6 +3940,11 @@ msgstr "slet fil"
 
 msgid "Deleted items"
 msgstr "Slettede"
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "slet fil"
 
 msgid "Denmark"
 msgstr ""
@@ -4609,10 +4629,6 @@ msgstr "Tuner opsætning"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "FEJL - kan ikke søge (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6298,6 +6314,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Optager"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ikke supporteret"
@@ -6398,6 +6417,9 @@ msgid "Hidden network"
 msgstr "Skjult netværk"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6903,6 +6925,16 @@ msgstr "Enheder"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Installerer"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Indstil timer"
 
 #
 #, fuzzy
@@ -8227,6 +8259,11 @@ msgstr "Flytter"
 msgid "Moving east..."
 msgstr "Flytter øst"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Drej mod øst"
+
 msgid "Moving to position"
 msgstr "Flytter til position"
 
@@ -9440,6 +9477,11 @@ msgstr "Sort stribe i top og bund af billede"
 #
 msgid "Pilot"
 msgstr "Pilot"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Aktivere multi pakker"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10711,6 +10753,11 @@ msgstr "Kanaler"
 msgid "Reload blacklists"
 msgstr "Genindlæs sort/hvid lister"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanaler"
+
 #, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Genindlæser pakker og kanaler..."
@@ -11773,6 +11820,11 @@ msgstr "Vælg opgraderingskilde til redigering."
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Vælg en film"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Software opdatering"
 
@@ -11964,8 +12016,17 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Enhedsnavn"
+
 #
 msgid "Select service to add..."
+msgstr "Vælg kanal der skal tilføjes..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Vælg kanal der skal tilføjes..."
 
 #
@@ -11975,6 +12036,16 @@ msgstr "Vælg placering"
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Vælg placering"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Vælg en film"
 
 #
 #, fuzzy
@@ -12037,6 +12108,11 @@ msgstr "vælg stien til film"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "vælg stien til film"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12204,6 +12280,14 @@ msgstr "Kanaler"
 #, fuzzy
 msgid "Service ID"
 msgstr "Kanal info"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Enhedsnavn"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Enhedsnavn"
 
 #
 #, fuzzy
@@ -13712,6 +13796,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr "Ingen forsinkelse"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Ingen forsinkelse"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Skriv PIN igen"
+
 msgid "Stream request"
 msgstr ""
 
@@ -14424,6 +14516,11 @@ msgstr "Der er mindst %d opdateringer tilgængelige."
 #
 msgid "There are currently no outstanding actions."
 msgstr "Der er aktuelt ingen udestående handlinger."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Ingen tilgængelige opdateringer."
 
 #
 #, fuzzy
@@ -15379,6 +15476,11 @@ msgid "Unpack to current folder"
 msgstr "vis program detaljer"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Aktivere multi pakker"
+
+#
 msgid "Unsupported"
 msgstr "Ikke understøttet"
 
@@ -15515,6 +15617,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Brug af Router"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "tilføj alternativer"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15558,6 +15665,11 @@ msgstr "Brug strømmåling"
 #, fuzzy
 msgid "Use skin default"
 msgstr "normal listestil"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "redigere alternativer"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16190,6 +16302,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17380,6 +17495,9 @@ msgstr ""
 msgid "extensions"
 msgstr " filendelser."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17493,6 +17611,9 @@ msgstr "grab denne frame som bitmap"
 msgid "green"
 msgstr "grøn"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -17509,6 +17630,9 @@ msgid "help..."
 msgstr "hjælp..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18388,6 +18512,11 @@ msgstr "vertikal"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "vent på mmi..."
 
 #
 msgid "wait for mmi..."
