--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
-"PO-Revision-Date: 2024-01-15 09:57+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"PO-Revision-Date: 2024-04-24 10:45+0200\n"
 "Last-Translator: Teamblue teamblue@online.de <teamblue-e2@online.de>\n"
 "Language-Team: Teamblue teamblue@online.de\n"
 "Language: de\n"
@@ -494,8 +494,8 @@ msgstr "(ZAP)"
 msgid "(activated +%d min)"
 msgstr "(Aktiviert +%d min)"
 
-msgid "(current)"
-msgstr "(aktuell)"
+msgid "(current image)"
+msgstr "(aktuelles Image)"
 
 msgid "(empty)"
 msgstr "(leer)"
@@ -508,6 +508,9 @@ msgstr "(DVD-Tonmenü zeigen, falls vorh.)"
 
 msgid "(unknown)"
 msgstr "(unbekannt)"
+
+msgid "* = Restart Required"
+msgstr "* = Neustart benötigt"
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Nur verfügbar, wenn mehr als ein Netzwerkadapter aktiv ist."
@@ -1784,8 +1787,14 @@ msgstr "CI"
 msgid "CI (Common Interface) Setup"
 msgstr "CI (Common Interface) Einstellungen"
 
+msgid "CI Boot Delay"
+msgstr "CI-Startverzögerung"
+
 msgid "CI assignment"
 msgstr "CI Zuweisung"
+
+msgid "CI enabled"
+msgstr "CI aktiviert"
 
 msgid "CI slot: "
 msgstr "CI Slot: "
@@ -2814,6 +2823,9 @@ msgstr "Ordner opieren"
 msgid "Copy to bouquets"
 msgstr "In Bouquets kopieren"
 
+msgid "Copying files"
+msgstr "Kopiere Dateien"
+
 #, python-format
 msgid "Cores: %s"
 msgstr "Kerne: %s"
@@ -3285,6 +3297,9 @@ msgstr "Gelöschte Images"
 
 msgid "Deleted items"
 msgstr "Gelöschte Objekte"
+
+msgid "Deleting files"
+msgstr "Lösche Dateien"
 
 msgid "Denmark"
 msgstr "Denmark"
@@ -3824,10 +3839,6 @@ msgstr "EPGRefresh Konfiguration"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "FEHLER - Suche fehlgeschlagen (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr "FEHLER beim Herunterladen der Datei %s/%s"
 
 msgid "East"
 msgstr "Ost"
@@ -5208,6 +5219,9 @@ msgstr "HDMI-IN-Aktionen"
 msgid "HDMI-IN Recording settings"
 msgstr "HDMI-IN Aufnahmeeinstellungen"
 
+msgid "HDMI-In"
+msgstr "HDMI-In"
+
 msgid "HDR10 support"
 msgstr "HDR 10 Unterstützung"
 
@@ -5286,6 +5300,9 @@ msgstr "Verstecktes Netzwerk"
 
 msgid "Hide"
 msgstr "Ausblenden"
+
+msgid "Hide and confirm invalid key message"
+msgstr "Ungültige Schlüsselmeldung ausblenden und bestätigen"
 
 msgid "Hide channel list in radio mode"
 msgstr "Verberge Senderliste im Radio-Modus"
@@ -5713,6 +5730,12 @@ msgstr "Eingabegeräte"
 
 msgid "Insert"
 msgstr "Einfügen"
+
+msgid "Insert Service"
+msgstr "Dienst einfügen"
+
+msgid "Insert entry"
+msgstr "Eintrag einfügen"
 
 msgid "Insert line before current line"
 msgstr "Zeile vor der aktuellen Zeile einfügen"
@@ -6766,6 +6789,9 @@ msgstr "Ansteuern"
 msgid "Moving east..."
 msgstr "Bewege östlich ..."
 
+msgid "Moving files"
+msgstr "Dateien verschieben"
+
 msgid "Moving to position"
 msgstr "Bewege zur Position"
 
@@ -7729,6 +7755,9 @@ msgstr "Pillarbox"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+msgid "Pin Userbouquet"
+msgstr "Pin Userbouquet"
 
 msgid "Pitcairn"
 msgstr "Pitcairn"
@@ -8711,6 +8740,9 @@ msgstr "Kanäle neuladen"
 msgid "Reload blacklists"
 msgstr "Blacklist neu laden"
 
+msgid "Reload services/bouquets list"
+msgstr "Liste der Dienste/Bouquets neu laden"
+
 msgid "Reloading EPG Cache..."
 msgstr "Lade EPG Cache neu..."
 
@@ -9533,6 +9565,9 @@ msgstr "Festplatte auswählen"
 msgid "Select OPKG source....."
 msgstr "OPKG-Quelle auswählen....."
 
+msgid "Select Service"
+msgstr "Service auswählen"
+
 msgid "Select Software Update"
 msgstr "Softwareaktualisierung auswählen"
 
@@ -9672,14 +9707,26 @@ msgstr "Wähle Satelliten"
 msgid "Select secondary softcam"
 msgstr "Wähle sekundäre Softcam"
 
+msgid "Select service name"
+msgstr "Servicename auswählen"
+
 msgid "Select service to add..."
 msgstr "Wählen Sie einen Kanal zum Hinzufügen..."
+
+msgid "Select service type"
+msgstr "Servicetyp auswählen"
 
 msgid "Select slot"
 msgstr "Steckplatz auswählen"
 
 msgid "Select sort method:"
 msgstr "Sortierungmodus festlegen:"
+
+msgid "Select stream URL"
+msgstr "Stream-URL auswählen"
+
+msgid "Select stream type"
+msgstr "Stream-Typ auswählen"
 
 msgid "Select target folder"
 msgstr "Wähle Zielverzeichnis"
@@ -9734,6 +9781,9 @@ msgstr "Wählen Sie den Zeichensatz für die Shift Tastatur aus"
 
 msgid "Select the shifted character set for the next character only"
 msgstr "Shift nur für das nächste Zeichen benutzen"
+
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Wähle standardmäßig den Timer vom Fallback-Tuner"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Wählen Sie den Tuner, der die motorisierte Schüssel steuert."
@@ -9862,6 +9912,12 @@ msgstr "Service & PIDs"
 
 msgid "Service ID"
 msgstr "Service ID"
+
+msgid "Service Name"
+msgstr "Service Name"
+
+msgid "Service Type"
+msgstr "Service-Art"
 
 msgid "Service belongs to a parental protected bouquet"
 msgstr "Kanal gehröt zu einem geschützten Bouquet"
@@ -11045,6 +11101,12 @@ msgstr "Stream"
 msgid "Stream Relay delay"
 msgstr "Stream Relay Verzögerung"
 
+msgid "Stream Type"
+msgstr "Streaming Typ"
+
+msgid "Stream URL"
+msgstr "Streaming URL"
+
 msgid "Stream request"
 msgstr "Stream Anfrage"
 
@@ -11653,6 +11715,9 @@ msgstr "Es sind mindestens %d Aktualisierungen verfügbar."
 
 msgid "There are currently no outstanding actions."
 msgstr "Es sind keine Aktivitäten geplant."
+
+msgid "There are no items currently available for this screen."
+msgstr "Für diesen Bildschirm sind derzeit keine Artikel verfügbar."
 
 msgid "There are no saved playlists to delete!"
 msgstr "Keine gespeicherten Wiedergabelisten zum löschen vorhanden!"
@@ -12471,6 +12536,9 @@ msgstr "Nach '%s' entpacken"
 msgid "Unpack to current folder"
 msgstr "In den aktuellen Ordner entpacken"
 
+msgid "Unpin Userbouquet"
+msgstr "Unpin Userbouquet"
+
 msgid "Unsupported"
 msgstr "Nicht unterstützt"
 
@@ -12588,6 +12656,9 @@ msgstr "Verwende Virgin EPG Information falls vorhanden."
 msgid "Use a gateway"
 msgstr "Einen Gateway verwenden"
 
+msgid "Use alternative skin"
+msgstr "Alternativen Skin verwenden"
+
 msgid "Use as PiP if possible"
 msgstr "Als PiP verwenden wenn möglich"
 
@@ -12623,6 +12694,9 @@ msgstr "Stromaufnahme messen"
 
 msgid "Use skin default"
 msgstr "Skin-Standard verwenden"
+
+msgid "Use the alternative screen"
+msgstr "Verwende den alternativen Bildschirm"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr "Ein installiertes Image auswählen und danach die grüne Taste um das Fullbackup zu starten."
@@ -13148,6 +13222,9 @@ msgstr "Wenn aktiviert geht der Receiver automatisch an, sobald der TV angeschal
 
 msgid "When enabled the timer from the fallback tuner is imported"
 msgstr "Wenn aktiviert werden die Timer vom Notfall Empfänger importiert"
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
+msgstr "Wenn aktiviert, ist der Timer des Fallback-Tuners der Standard-Timer"
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
 msgstr "Wenn aktiviert, wird die Kanalliste nicht geschlossen wenn ein neuer Kanal angewählt wird. Umgeschaltet wird durch 2 maliges Drücken von OK. Dies ist als eine Art Vorschaumodus zu betrachten"
@@ -14249,6 +14326,9 @@ msgstr "Experimentelle Filme/Video"
 msgid "extensions"
 msgstr "Erweiterungen"
 
+msgid "extra high"
+msgstr "Extra hoch"
+
 msgid "extra wide"
 msgstr "extra breit"
 
@@ -14339,6 +14419,9 @@ msgstr "Diesen Frame als Bitmap speichern"
 msgid "green"
 msgstr "Grün"
 
+msgid "half an hour"
+msgstr "halbe Stunde"
+
 msgid "handicraft"
 msgstr "Handwerkskunst"
 
@@ -14353,6 +14436,9 @@ msgstr "Hilfe..."
 
 msgid "hide"
 msgstr "Verstecken"
+
+msgid "high"
+msgstr "hoch"
 
 msgid "horizontal"
 msgstr "horizontal"
@@ -15069,6 +15155,9 @@ msgstr "Vertikal"
 
 msgid "violet"
 msgstr "Violett"
+
+msgid "wait for ci..."
+msgstr "Warte auf CI..."
 
 msgid "wait for mmi..."
 msgstr "Warte auf mmi..."
