--- a/po/en.po
+++ b/po/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -468,7 +468,7 @@ msgstr ""
 msgid "(activated +%d min)"
 msgstr ""
 
-msgid "(current)"
+msgid "(current image)"
 msgstr ""
 
 msgid "(empty)"
@@ -481,6 +481,9 @@ msgid "(show optional DVD audio menu)"
 msgstr ""
 
 msgid "(unknown)"
+msgstr ""
+
+msgid "* = Restart Required"
 msgstr ""
 
 msgid "* Only available if more than one interface is active."
@@ -1736,7 +1739,13 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr ""
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
+msgstr ""
+
+msgid "CI enabled"
 msgstr ""
 
 msgid "CI slot: "
@@ -2737,6 +2746,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr ""
 
+msgid "Copying files"
+msgstr ""
+
 #, python-format
 msgid "Cores: %s"
 msgstr ""
@@ -3205,6 +3217,9 @@ msgid "Deleted image"
 msgstr ""
 
 msgid "Deleted items"
+msgstr ""
+
+msgid "Deleting files"
 msgstr ""
 
 msgid "Denmark"
@@ -3729,10 +3744,6 @@ msgstr ""
 
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
-msgstr ""
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -5088,6 +5099,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Adjust 3D settings"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5165,6 +5179,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -5585,6 +5602,13 @@ msgid "Input devices"
 msgstr ""
 
 msgid "Insert"
+msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Enter the service PIN"
+
+msgid "Insert entry"
 msgstr ""
 
 msgid "Insert line before current line"
@@ -6633,6 +6657,9 @@ msgstr ""
 msgid "Moving east..."
 msgstr ""
 
+msgid "Moving files"
+msgstr ""
+
 msgid "Moving to position"
 msgstr ""
 
@@ -7581,6 +7608,9 @@ msgid "Pillarbox"
 msgstr ""
 
 msgid "Pilot"
+msgstr ""
+
+msgid "Pin Userbouquet"
 msgstr ""
 
 msgid "Pitcairn"
@@ -8540,6 +8570,9 @@ msgstr ""
 msgid "Reload blacklists"
 msgstr ""
 
+msgid "Reload services/bouquets list"
+msgstr ""
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -9363,6 +9396,9 @@ msgstr ""
 msgid "Select OPKG source....."
 msgstr ""
 
+msgid "Select Service"
+msgstr ""
+
 msgid "Select Software Update"
 msgstr ""
 
@@ -9502,13 +9538,25 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+msgid "Select service name"
+msgstr ""
+
 msgid "Select service to add..."
+msgstr ""
+
+msgid "Select service type"
 msgstr ""
 
 msgid "Select slot"
 msgstr ""
 
 msgid "Select sort method:"
+msgstr ""
+
+msgid "Select stream URL"
+msgstr ""
+
+msgid "Select stream type"
 msgstr ""
 
 msgid "Select target folder"
@@ -9563,6 +9611,9 @@ msgid "Select the shifted character set"
 msgstr ""
 
 msgid "Select the shifted character set for the next character only"
+msgstr ""
+
+msgid "Select the timer from the fallback tuner by default"
 msgstr ""
 
 msgid "Select the tuner that controls the motorised dish."
@@ -9690,6 +9741,12 @@ msgid "Service & PIDs"
 msgstr ""
 
 msgid "Service ID"
+msgstr ""
+
+msgid "Service Name"
+msgstr ""
+
+msgid "Service Type"
 msgstr ""
 
 msgid "Service belongs to a parental protected bouquet"
@@ -10868,6 +10925,13 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Changelog"
+
 msgid "Stream request"
 msgstr ""
 
@@ -11428,6 +11492,9 @@ msgid "There are at least %d updates available."
 msgstr "There are at least %d updates available."
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 msgid "There are no saved playlists to delete!"
@@ -12215,6 +12282,9 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+msgid "Unpin Userbouquet"
+msgstr ""
+
 msgid "Unsupported"
 msgstr ""
 
@@ -12332,6 +12402,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "Show tag menu"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -12367,6 +12441,10 @@ msgstr ""
 
 msgid "Use skin default"
 msgstr ""
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Show tag menu"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -12860,6 +12938,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -13894,6 +13975,9 @@ msgstr ""
 msgid "extensions"
 msgstr ""
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -13984,6 +14068,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -13997,6 +14084,9 @@ msgid "help..."
 msgstr ""
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -14705,6 +14795,9 @@ msgid "vertical"
 msgstr ""
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 msgid "wait for mmi..."
