--- a/po/enigma2.pot
+++ b/po/enigma2.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:34+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -467,7 +467,7 @@ msgstr ""
 msgid "(activated +%d min)"
 msgstr ""
 
-msgid "(current)"
+msgid "(current image)"
 msgstr ""
 
 msgid "(empty)"
@@ -480,6 +480,9 @@ msgid "(show optional DVD audio menu)"
 msgstr ""
 
 msgid "(unknown)"
+msgstr ""
+
+msgid "* = Restart Required"
 msgstr ""
 
 msgid "* Only available if more than one interface is active."
@@ -1583,7 +1586,13 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr ""
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
+msgstr ""
+
+msgid "CI enabled"
 msgstr ""
 
 msgid "CI slot: "
@@ -2252,6 +2261,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr ""
 
+msgid "Copying files"
+msgstr ""
+
 #, python-format
 msgid "Cores: %s"
 msgstr ""
@@ -2651,6 +2663,9 @@ msgid "Deleted image"
 msgstr ""
 
 msgid "Deleted items"
+msgstr ""
+
+msgid "Deleting files"
 msgstr ""
 
 msgid "Denmark"
@@ -3102,10 +3117,6 @@ msgstr ""
 
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
-msgstr ""
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -4249,6 +4260,9 @@ msgstr ""
 msgid "HDMI-IN Actions"
 msgstr ""
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -4305,6 +4319,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide known extensions"
@@ -4637,6 +4654,12 @@ msgid "Input device setup"
 msgstr ""
 
 msgid "Insert"
+msgstr ""
+
+msgid "Insert Service"
+msgstr ""
+
+msgid "Insert entry"
 msgstr ""
 
 msgid "Insert line before current line"
@@ -5572,6 +5595,9 @@ msgstr ""
 msgid "Moving east..."
 msgstr ""
 
+msgid "Moving files"
+msgstr ""
+
 msgid "Moving to position"
 msgstr ""
 
@@ -6411,6 +6437,9 @@ msgstr ""
 msgid "Pilot"
 msgstr ""
 
+msgid "Pin Userbouquet"
+msgstr ""
+
 msgid "Pitcairn"
 msgstr ""
 
@@ -7206,6 +7235,9 @@ msgstr ""
 msgid "Reload blacklists"
 msgstr ""
 
+msgid "Reload services/bouquets list"
+msgstr ""
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -7942,6 +7974,9 @@ msgstr ""
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
+msgid "Select Service"
+msgstr ""
+
 msgid "Select Software Update"
 msgstr ""
 
@@ -8051,13 +8086,25 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+msgid "Select service name"
+msgstr ""
+
 msgid "Select service to add..."
+msgstr ""
+
+msgid "Select service type"
 msgstr ""
 
 msgid "Select slot"
 msgstr ""
 
 msgid "Select sort method:"
+msgstr ""
+
+msgid "Select stream URL"
+msgstr ""
+
+msgid "Select stream type"
 msgstr ""
 
 msgid "Select target folder"
@@ -8112,6 +8159,9 @@ msgid "Select the shifted character set"
 msgstr ""
 
 msgid "Select the shifted character set for the next character only"
+msgstr ""
+
+msgid "Select the timer from the fallback tuner by default"
 msgstr ""
 
 msgid "Select the tuner that controls the motorised dish."
@@ -8220,6 +8270,12 @@ msgid "Service & PIDs"
 msgstr ""
 
 msgid "Service ID"
+msgstr ""
+
+msgid "Service Name"
+msgstr ""
+
+msgid "Service Type"
 msgstr ""
 
 msgid "Service belongs to a parental protected bouquet"
@@ -9187,6 +9243,12 @@ msgstr ""
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+msgid "Stream URL"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -9630,6 +9692,9 @@ msgid "There are at least %d updates available."
 msgstr ""
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 msgid "There are no saved playlists to delete!"
@@ -10343,6 +10408,9 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+msgid "Unpin Userbouquet"
+msgstr ""
+
 msgid "Unsupported"
 msgstr ""
 
@@ -10433,6 +10501,9 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+msgid "Use alternative skin"
+msgstr ""
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -10461,6 +10532,9 @@ msgid "Use power measurement"
 msgstr ""
 
 msgid "Use skin default"
+msgstr ""
+
+msgid "Use the alternative screen"
 msgstr ""
 
 msgid "Use the cursor keys to select an installed image and then Start button."
@@ -10851,6 +10925,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled you can customize the OpenWebIf settings for the fallback tuner"
@@ -11615,6 +11692,9 @@ msgstr ""
 msgid "extensions"
 msgstr ""
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -11705,6 +11785,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -11718,6 +11801,9 @@ msgid "help..."
 msgstr ""
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -12423,6 +12509,9 @@ msgid "vertical"
 msgstr ""
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 msgid "wait for mmi..."
