--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2020-03-17 01:28+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -517,7 +517,7 @@ msgid "(activated +%d min)"
 msgstr "(Activado  % d min)"
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Sectores: %s (máx) %s (actual)"
 
 #
@@ -535,6 +535,9 @@ msgstr "(muestra ménu de audio de DVD)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "desconocido"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2156,9 +2159,17 @@ msgstr "CI"
 msgid "CI (Common Interface) Setup"
 msgstr "Interface común"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "Asignación CI"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "activado"
 
 #
 #, fuzzy
@@ -3344,6 +3355,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "copiar a listas"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d archivo"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Controladores DVB:"
@@ -3944,6 +3959,12 @@ msgstr "Borrar grabación"
 
 msgid "Deleted items"
 msgstr "Ítems borrados"
+
+#
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "borrar fichero"
 
 msgid "Denmark"
 msgstr ""
@@ -4631,10 +4652,6 @@ msgstr "Configuración sintonizador"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - ¡falló la búsqueda (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6352,6 +6369,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Grabando"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "Soporte IPv6"
@@ -6454,6 +6474,9 @@ msgid "Hidden network"
 msgstr "Red oculta"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6949,6 +6972,16 @@ msgstr "Dispositivos de entrada"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instalando servicio"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Grabación"
 
 #
 #, fuzzy
@@ -8252,6 +8285,11 @@ msgstr "Moviendo"
 msgid "Moving east..."
 msgstr "Moviendo este..."
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Mover al este"
+
 msgid "Moving to position"
 msgstr "Moviendo a la posicón"
 
@@ -9443,6 +9481,10 @@ msgstr "Pillarbox"
 #
 msgid "Pilot"
 msgstr "Piloto"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Carga userbouqeuts no vinculados"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10702,6 +10744,11 @@ msgstr "Recargar servicios"
 msgid "Reload blacklists"
 msgstr "Recargar listas blancas/negras"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Recargar servicios"
+
 #, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Recargando bouquets y servicios"
@@ -11746,6 +11793,12 @@ msgid "Select OPKG source....."
 msgstr "Seleccione la fuente de actualización"
 
 #
+#
+#, fuzzy
+msgid "Select Service"
+msgstr "Seleccionar una película"
+
+#
 msgid "Select Software Update"
 msgstr "Seleccione Actualización de software"
 
@@ -11936,7 +11989,17 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Nombre del servicio"
+
+#
 msgid "Select service to add..."
+msgstr "Seleccione canal a añadir..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Seleccione canal a añadir..."
 
 #
@@ -11947,6 +12010,17 @@ msgstr "Seleccionar Localización"
 
 msgid "Select sort method:"
 msgstr "Elija un método para ordenar:"
+
+#
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Seleccionar Localización"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Seleccione un sintonizador"
 
 #
 msgid "Select target folder"
@@ -12010,6 +12084,12 @@ msgstr "seleccione el directorio de las películas"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "seleccione el directorio de las películas"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12174,6 +12254,16 @@ msgstr "Canales"
 #, fuzzy
 msgid "Service ID"
 msgstr "Servicio"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Nombre del servicio"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Nombre del servicio"
 
 #
 #, fuzzy
@@ -13668,6 +13758,14 @@ msgstr "Stream"
 msgid "Stream Relay delay"
 msgstr "Retraso desplazamiento"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Stream"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Stream"
+
 msgid "Stream request"
 msgstr "Solicitud de stream"
 
@@ -14358,6 +14456,11 @@ msgstr "Hay por lo menos %d actualizaciones disponibles."
 #
 msgid "There are currently no outstanding actions."
 msgstr "No hay actualmente ninguna acción en ejecución."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "No hay actualizaciones disponibles."
 
 #
 #, fuzzy
@@ -15339,6 +15442,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "Mostrar modo actual"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Carga userbouqeuts no vinculados"
+
 #
 msgid "Unsupported"
 msgstr "No soportado"
@@ -15474,6 +15581,11 @@ msgstr "Utilice información EPG Virgin cuando está disponible."
 msgid "Use a gateway"
 msgstr "Usar puerta de enlace"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "añadir alternativas"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15513,6 +15625,11 @@ msgstr "Usar medida de potencia"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Predeterminar"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "editar alternativas"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16147,6 +16264,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Cuando está activado, el receptor automáticamente utilizará la pista de audio que ha seleccionado antes."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17380,6 +17500,9 @@ msgstr "cine experimental / video"
 msgid "extensions"
 msgstr "extensiones."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17496,6 +17619,9 @@ msgstr "grabar esta pantalla como bitmap"
 msgid "green"
 msgstr "verde"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "artesanía"
 
@@ -17512,6 +17638,9 @@ msgid "help..."
 msgstr "ayuda..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18389,6 +18518,11 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "esperar para nmi..."
 
 #
 msgid "wait for mmi..."
