--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -499,7 +499,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "activate current configuration"
 
 msgid "(empty)"
@@ -514,6 +514,9 @@ msgstr "(הצג תפריטי קול אפשריים לדי וי די)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "לא ידוע"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "אפשרי רק מעל לממשק אחד פעיל *"
@@ -2011,9 +2014,16 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "ממשק משותף"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr ""
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "אופשר"
 
 msgid "CI slot: "
 msgstr ""
@@ -3107,6 +3117,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "העתק לתיקית ערוצים"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "...בודק קבצי מערכת"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "מהירות הרצה אחורנית"
@@ -3648,6 +3662,10 @@ msgstr "מחק קובץ"
 
 msgid "Deleted items"
 msgstr ""
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "מחק קובץ"
 
 msgid "Denmark"
 msgstr ""
@@ -4265,10 +4283,6 @@ msgstr "Tuner הגדרת"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "(%s) !שגיאה - נכשל בסריקה"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -5836,6 +5850,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "מקליט"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "לא נתמך"
@@ -5929,6 +5946,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6402,6 +6422,15 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "מתקין"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "רשומת טיימר"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7648,6 +7677,10 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Move east"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Move east"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -8775,6 +8808,11 @@ msgstr "Pillarbox"
 msgid "Pilot"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "אפשר תיקיות ערוצים מרובות"
+
 msgid "Pitcairn"
 msgstr ""
 
@@ -9899,6 +9937,11 @@ msgstr "שירותים"
 msgid "Reload blacklists"
 msgstr "Reload Black-/Whitelists"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "שירותים"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -10853,6 +10896,11 @@ msgstr "בחר"
 msgid "Select OPKG source....."
 msgstr "Select upgrade source to edit."
 
+#
+#, fuzzy
+msgid "Select Service"
+msgstr "Select a movie"
+
 #, fuzzy
 msgid "Select Software Update"
 msgstr "עדכון תוכנה"
@@ -11027,7 +11075,16 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Select service name"
+msgstr "סרוקת שירות"
+
 msgid "Select service to add..."
+msgstr "Select service to add..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Select service to add..."
 
 #, fuzzy
@@ -11036,6 +11093,15 @@ msgstr "Select Location"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Select Location"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Select a movie"
 
 #
 #, fuzzy
@@ -11095,6 +11161,10 @@ msgstr "select the movie path"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "select the movie path"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -11247,6 +11317,16 @@ msgstr "שירותים"
 #, fuzzy
 msgid "Service ID"
 msgstr "שירות"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "סרוקת שירות"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "סרוקת שירות"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -12682,6 +12762,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "ערוץ"
+
 msgid "Stream request"
 msgstr ""
 
@@ -13357,6 +13445,10 @@ msgstr ".אין עדכונים זמינים"
 #
 msgid "There are currently no outstanding actions."
 msgstr ""
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr ".אין עדכונים זמינים"
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -14256,6 +14348,11 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "הצג מידע על האירוע"
 
+#
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "אפשר תיקיות ערוצים מרובות"
+
 msgid "Unsupported"
 msgstr "לא נתמך"
 
@@ -14390,6 +14487,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "add alternatives"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -14429,6 +14530,10 @@ msgstr "Use power measurement"
 #, fuzzy
 msgid "Use skin default"
 msgstr "שחזור גיבויים"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "edit alternatives"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15002,6 +15107,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16108,6 +16216,9 @@ msgstr ""
 msgid "extensions"
 msgstr "תוספות"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -16211,6 +16322,9 @@ msgstr ""
 msgid "green"
 msgstr "ירוק"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -16226,6 +16340,9 @@ msgid "help..."
 msgstr "...עזרה"
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -17033,6 +17150,11 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "wait for mmi..."
 
 #
 msgid "wait for mmi..."
