--- a/po/hr.po
+++ b/po/hr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2020-03-03 08:50+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -507,7 +507,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Konfiguracija Tunera"
 
 #
@@ -525,6 +525,9 @@ msgstr ""
 #, fuzzy
 msgid "(unknown)"
 msgstr "<nepoznato>"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2088,9 +2091,17 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr "Zajedničko sučelje"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr ""
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "omogućeno"
 
 msgid "CI slot: "
 msgstr ""
@@ -3229,6 +3240,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "kopiraj u pakete"
 
+msgid "Copying files"
+msgstr ""
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3819,6 +3833,11 @@ msgstr "Brisanje neuspješno!"
 
 msgid "Deleted items"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Brisanje neuspješno!"
 
 msgid "Denmark"
 msgstr ""
@@ -4480,10 +4499,6 @@ msgstr "Konfiguracija Tunera"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "GREAŠKA - neuspjelo skeniranje (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Istok"
@@ -6134,6 +6149,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Snimanje"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -6232,6 +6250,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6721,6 +6742,16 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instaliram"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Unos Tajmera"
 
 msgid "Insert line before current line"
 msgstr ""
@@ -7992,6 +8023,11 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Pokreći na istok"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Pokreći na istok"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -9171,6 +9207,11 @@ msgstr ""
 #
 msgid "Pilot"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Uključi višestruke pakete"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10391,6 +10432,11 @@ msgstr "Usluge"
 msgid "Reload blacklists"
 msgstr "crnalista"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Usluge"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -11431,6 +11477,11 @@ msgstr "Odaberi film"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Odaberi film"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Odaberi film"
 
@@ -11623,8 +11674,18 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Pretraživanje usluge"
+
+#
 msgid "Select service to add..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select service type"
+msgstr "Vrste korištenih usluga za skeniranje"
 
 #
 #, fuzzy
@@ -11633,6 +11694,16 @@ msgstr "EPG selektor "
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "EPG selektor "
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Odaberi film"
 
 #
 #, fuzzy
@@ -11695,6 +11766,11 @@ msgstr "Odaberi film"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Odaberi film"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -11841,6 +11917,16 @@ msgstr "Usluge"
 #, fuzzy
 msgid "Service ID"
 msgstr "Usluge "
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Pretraživanje usluge"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Pretraživanje usluge"
 
 #
 #, fuzzy
@@ -13313,6 +13399,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "Kanal"
+
 msgid "Stream request"
 msgstr ""
 
@@ -13978,6 +14072,9 @@ msgstr "Dostupno je najmanje %d ažuriranja."
 
 #
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #
@@ -14889,6 +14986,11 @@ msgid "Unpack to current folder"
 msgstr "prikaži proširene infor. "
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Uključi višestruke pakete"
+
+#
 msgid "Unsupported"
 msgstr ""
 
@@ -15022,6 +15124,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Koristi gateway"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "dodaj alternative"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15064,6 +15171,11 @@ msgstr "Koristi mjerenje snage"
 #, fuzzy
 msgid "Use skin default"
 msgstr "standardne postavke stila liste"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "editiraj alternative"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15655,6 +15767,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16807,6 +16922,9 @@ msgstr ""
 msgid "extensions"
 msgstr "Ekstenzije"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -16921,6 +17039,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -16937,6 +17058,9 @@ msgid "help..."
 msgstr "pomoć..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -17804,6 +17928,11 @@ msgstr "vertikala"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "čekam mmi..."
 
 #
 msgid "wait for mmi..."
