--- a/po/is.po
+++ b/po/is.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -516,7 +516,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "virkja núverandi stillingar"
 
 #
@@ -535,6 +535,9 @@ msgstr "(sýna viðbótar DVD hljóð valmynd)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "óþekktur"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2047,8 +2050,16 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Afruglara tengi"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "CI stillingar"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "virkt"
 
 #
 #, fuzzy
@@ -3146,6 +3157,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "afrita til rásavanda"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Löng skráarnöfn"
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3717,6 +3732,11 @@ msgstr "eyða skrá"
 
 msgid "Deleted items"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "eyða skrá"
 
 msgid "Denmark"
 msgstr ""
@@ -4381,10 +4401,6 @@ msgstr "Stilling móttakara"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "VILLA - gat ekki leitað (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6029,6 +6045,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Upptaka"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ekki stutt"
@@ -6129,6 +6148,9 @@ msgid "Hidden network"
 msgstr "Falið netkerfi"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6623,6 +6645,16 @@ msgstr "Inntaks tæki"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Set inn"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Innsláttur tímastilltra atriða"
 
 #
 #, fuzzy
@@ -7937,6 +7969,11 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Færa austur"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Færa austur"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -9129,6 +9166,11 @@ msgstr "Pillarbox"
 #
 msgid "Pilot"
 msgstr "Stjóri"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Virkja marga rásavendi"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10365,6 +10407,11 @@ msgstr "Rásir"
 msgid "Reload blacklists"
 msgstr "Endurhlaða svart-/hvítlista"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Rásir"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -11417,6 +11464,11 @@ msgstr "Veldu upphafs slóð til að breyta."
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Veldu mynd"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Hugbúnaðar uppfærsla"
 
@@ -11601,7 +11653,17 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Leita að rásum"
+
+#
 msgid "Select service to add..."
+msgstr "Veldur rás til að bæta við..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Veldur rás til að bæta við..."
 
 #
@@ -11611,6 +11673,16 @@ msgstr "Velja staðsetningu"
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Velja staðsetningu"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Veldu mynd"
 
 #, fuzzy
 msgid "Select target folder"
@@ -11672,6 +11744,11 @@ msgstr "velja slóð að mynd"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "velja slóð að mynd"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -11837,6 +11914,16 @@ msgstr "Rásir"
 #, fuzzy
 msgid "Service ID"
 msgstr "Rás"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Leita að rásum"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Leita að rásum"
 
 #
 #, fuzzy
@@ -13341,6 +13428,15 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Stream Type"
+msgstr "Áfram"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Sláðu aftur inn nýtt PIN"
+
 msgid "Stream request"
 msgstr ""
 
@@ -14055,6 +14151,10 @@ msgstr "Það er engin uppfærsla tiltæk."
 
 msgid "There are currently no outstanding actions."
 msgstr "Það er ekkert atriði sem að liggur fyrir."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Það er engin uppfærsla tiltæk."
 
 #
 #, fuzzy
@@ -14993,6 +15093,11 @@ msgid "Unpack to current folder"
 msgstr "sýna atriði nánar"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Virkja marga rásavendi"
+
+#
 msgid "Unsupported"
 msgstr "Ekki stutt"
 
@@ -15124,6 +15229,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Nota beini"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "bæta við valkosti"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15166,6 +15276,11 @@ msgstr "Nota aflmælingu"
 #, fuzzy
 msgid "Use skin default"
 msgstr "stíll lista venjulegur"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "breyta valkosti"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15791,6 +15906,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16959,6 +17077,9 @@ msgstr ""
 msgid "extensions"
 msgstr " viðbætur."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17073,6 +17194,9 @@ msgstr "grípa þennan ramma sem bitmap"
 msgid "green"
 msgstr "grænn"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -17089,6 +17213,9 @@ msgid "help..."
 msgstr "hjálp..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -17956,6 +18083,11 @@ msgstr "lóðrétt"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "bíð eftir mmi..."
 
 #
 msgid "wait for mmi..."
