--- a/po/ku.po
+++ b/po/ku.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -489,7 +489,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Ti dixwazi aktif biki"
 
 msgid "(empty)"
@@ -505,6 +505,9 @@ msgstr "(show optional DVD dengé menu)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "unknown"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Only available if more than one interface is active."
@@ -1893,8 +1896,15 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Qerta Ortax"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "CI assignment"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "enabled"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2963,6 +2973,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "copy to bouquets"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Copy"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Rewind speeds"
@@ -3477,6 +3491,10 @@ msgstr "Delete file"
 
 msgid "Deleted items"
 msgstr "Deleted items"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Delete file"
 
 msgid "Denmark"
 msgstr ""
@@ -4064,10 +4082,6 @@ msgstr "Çékirina Tuner "
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - failed to scan (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "East"
@@ -5549,6 +5563,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Recording"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "not supported"
@@ -5639,6 +5656,9 @@ msgid "Hidden network"
 msgstr "Hidden network"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6093,6 +6113,14 @@ msgstr "device girédayi"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Installing"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Timer entry"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7224,6 +7252,10 @@ msgstr "Moving"
 msgid "Moving east..."
 msgstr "Moving east ..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Move east"
+
 msgid "Moving to position"
 msgstr "Moving to position"
 
@@ -8285,6 +8317,10 @@ msgstr "Pillarbox"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Enable multiple bouquets"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9350,6 +9386,10 @@ msgid "Reload blacklists"
 msgstr "Reload black-/white lists"
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Services"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Reloading bouquets and services..."
 
@@ -10258,6 +10298,10 @@ msgid "Select OPKG source....."
 msgstr "Select upgrade source"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Select movie"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Nisisiya İmage Bine"
 
@@ -10415,7 +10459,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Service name"
+
 msgid "Select service to add..."
+msgstr "Select service to add..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Select service to add..."
 
 #, fuzzy
@@ -10424,6 +10476,14 @@ msgstr "Select location"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Select location"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Select a tuner"
 
 msgid "Select target folder"
 msgstr "Select target folder"
@@ -10480,6 +10540,10 @@ msgstr "Select the movie path"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Select the movie path"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10622,6 +10686,14 @@ msgstr "Services"
 #, fuzzy
 msgid "Service ID"
 msgstr "Hizmeti"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Service name"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Service name"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11920,6 +11992,14 @@ msgstr "Stream"
 msgid "Stream Relay delay"
 msgstr "No delay"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Stream"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Stream"
+
 msgid "Stream request"
 msgstr "Stream request"
 
@@ -12542,6 +12622,10 @@ msgstr "There are at least %d updates available."
 
 msgid "There are currently no outstanding actions."
 msgstr "There are currently no outstanding actions."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "There are no updates available."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13391,6 +13475,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "Show event details"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Enable multiple bouquets"
+
 msgid "Unsupported"
 msgstr "Unsupported"
 
@@ -13514,6 +13602,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Use a gateway"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "add alternatives"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13551,6 +13643,10 @@ msgstr "Use power measurement"
 #, fuzzy
 msgid "Use skin default"
 msgstr "list style default"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "edit alternatives"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14105,6 +14201,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "When enabled, the receiver will automatically use the audio track which you selected before."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15213,6 +15312,9 @@ msgstr "experimental film/video"
 msgid "extensions"
 msgstr "Diréji"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15310,6 +15412,9 @@ msgstr "grab this frame as bitmap"
 msgid "green"
 msgstr "green"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "handicraft"
 
@@ -15324,6 +15429,9 @@ msgid "help..."
 msgstr "help..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16089,6 +16197,10 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "wait for mmi..."
 
 msgid "wait for mmi..."
 msgstr "wait for mmi..."
