--- a/po/lt.po
+++ b/po/lt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2020-02-29 08:52+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -482,7 +482,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "aktyvuokite dabartinę konfigūraciją"
 
 msgid "(empty)"
@@ -498,6 +498,9 @@ msgstr "(rodyti pasirenkamą DVD garso meniu)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "nežinoma"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "*Pasiekiamas tiktai, jei daugiau kaip viena sąsaja yra aktyvi."
@@ -1903,8 +1906,15 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Įstatomi moduliai"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "CI nustatymas"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "įjungtas"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2979,6 +2989,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "kopijuoti į paketus"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Ilgi failų pavadinimai"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Persukimo greitis"
@@ -3503,6 +3517,10 @@ msgstr "trinti failą"
 
 msgid "Deleted items"
 msgstr ""
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "trinti failą"
 
 msgid "Denmark"
 msgstr ""
@@ -4088,10 +4106,6 @@ msgstr "Imtuvo konfigūravimas"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "KLAIDA - nenuskanuota (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Rytai"
@@ -5598,6 +5612,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Įrašymas"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "nepalaikomas"
@@ -5687,6 +5704,9 @@ msgid "Hidden network"
 msgstr "Paslėptas tinklas"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6144,6 +6164,14 @@ msgstr "Įvesties prietaisai"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Įdiegiama"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Laikmačio užduotis"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7305,6 +7333,10 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Sukti į rytus"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Sukti į rytus"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -8370,6 +8402,10 @@ msgstr "Pillarbox"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Įjungti daugiau paketų"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9440,6 +9476,10 @@ msgstr "Kanalai"
 msgid "Reload blacklists"
 msgstr "Perkrauti Juodus-/Baltus sąrašus"
 
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanalai"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -10359,6 +10399,10 @@ msgid "Select OPKG source....."
 msgstr "Išsirinkite atnaujinimo šaltinį dėl redagavimo."
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Išsirinkite filmą"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Programinės įrangos atnaujinimas"
 
@@ -10522,7 +10566,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Kanalų skanavimas"
+
 msgid "Select service to add..."
+msgstr "Išsirinkite kanalą, kurį norite pridėti..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Išsirinkite kanalą, kurį norite pridėti..."
 
 #, fuzzy
@@ -10531,6 +10583,14 @@ msgstr "Išsirinkite vietą"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Išsirinkite vietą"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Išsirinkite filmą"
 
 #, fuzzy
 msgid "Select target folder"
@@ -10589,6 +10649,10 @@ msgstr "pasirinkite filmo kelią"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "pasirinkite filmo kelią"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10732,6 +10796,14 @@ msgstr "Kanalai"
 #, fuzzy
 msgid "Service ID"
 msgstr "Apie kanalą"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Kanalų skanavimas"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Kanalų skanavimas"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -12062,6 +12134,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Tęsti"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Iš naujo įrašykite naują PIN"
+
 msgid "Stream request"
 msgstr ""
 
@@ -12697,6 +12777,10 @@ msgstr "Yra bent %d galimi atnaujinimai."
 
 msgid "There are currently no outstanding actions."
 msgstr "Nėra šiuo metu jokių neatliktų veiksmų."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Nėra jokių pasiekiamų atnaujinimų."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13551,6 +13635,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "rodyti užduočių detales"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Įjungti daugiau paketų"
+
 msgid "Unsupported"
 msgstr "Nepalaikoma"
 
@@ -13673,6 +13761,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Naudoti šliuzą"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "pridėti kitus"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13711,6 +13803,10 @@ msgstr "Naudoti įtampos išmatavimus"
 #, fuzzy
 msgid "Use skin default"
 msgstr "numatytas sąrašo stilius"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "redaguoti kitus"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14263,6 +14359,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15343,6 +15442,9 @@ msgstr ""
 msgid "extensions"
 msgstr " išplėtimai."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15441,6 +15543,9 @@ msgstr "užgriebti šį rėmą kaip taškinę grafiką"
 msgid "green"
 msgstr "žalias"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -15455,6 +15560,9 @@ msgid "help..."
 msgstr "pagalba..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16211,6 +16319,10 @@ msgstr "vertikali"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "laukite atsakymo iš mmi..."
 
 msgid "wait for mmi..."
 msgstr "laukite atsakymo iš mmi..."
