--- a/po/ro.po
+++ b/po/ro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -480,7 +480,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "activeaza configurarea curenta"
 
 msgid "(empty)"
@@ -495,6 +495,9 @@ msgstr "(afiseaza optional pe DVD audio menu)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "necunoscut"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Disponibil doar in cazul in care mai mult de o interfata este activa."
@@ -1896,8 +1899,15 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Common Interface"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "Asignarea CI"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "activat"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2961,6 +2971,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "copiaza in bouquete"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Se verifica sistemul de fisiere..."
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Viteze de derulare"
@@ -3484,6 +3498,10 @@ msgstr "sterge file"
 
 msgid "Deleted items"
 msgstr ""
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "sterge file"
 
 msgid "Denmark"
 msgstr ""
@@ -4067,10 +4085,6 @@ msgstr "Configurare tuner"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "EROARE - scanare esuata (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Est"
@@ -5557,6 +5571,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Inregistrare"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5644,6 +5661,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6094,6 +6114,14 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instaleaza"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Intrare timer"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7246,6 +7274,10 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Misca spre est"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Misca spre est"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -8303,6 +8335,10 @@ msgstr "Pillarbox"
 msgid "Pilot"
 msgstr "Pilot"
 
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Activeaza buchete multiple"
+
 msgid "Pitcairn"
 msgstr ""
 
@@ -9358,6 +9394,10 @@ msgstr "Servicii"
 msgid "Reload blacklists"
 msgstr "lista neagra"
 
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Servicii"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -10270,6 +10310,10 @@ msgid "Select OPKG source....."
 msgstr "Alege sursa de actualizare"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Alegeti un film"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Actualizare software"
 
@@ -10432,7 +10476,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Scanare Serviciu"
+
 msgid "Select service to add..."
+msgstr "Selectati serviciul care sa fie adaugat..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Selectati serviciul care sa fie adaugat..."
 
 #, fuzzy
@@ -10441,6 +10493,14 @@ msgstr "Alege locatia"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Alege locatia"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Alegeti un film"
 
 #, fuzzy
 msgid "Select target folder"
@@ -10499,6 +10559,10 @@ msgstr "selecteaza calea filmului"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "selecteaza calea filmului"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10641,6 +10705,14 @@ msgstr "Servicii"
 #, fuzzy
 msgid "Service ID"
 msgstr "Serviciu"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Scanare Serviciu"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Scanare Serviciu"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11957,6 +12029,13 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Canal"
+
 msgid "Stream request"
 msgstr ""
 
@@ -12579,6 +12658,9 @@ msgid "There are at least %d updates available."
 msgstr ""
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #, fuzzy
@@ -13430,6 +13512,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "arata detaliile evenimentului"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Activeaza buchete multiple"
+
 msgid "Unsupported"
 msgstr ""
 
@@ -13552,6 +13638,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Foloseste un gateway"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "adauga alternative"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13590,6 +13680,10 @@ msgstr "Foloseste Masurarea Energiei"
 #, fuzzy
 msgid "Use skin default"
 msgstr "listeaza stilul default"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "editeaza alternative"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14141,6 +14235,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15206,6 +15303,9 @@ msgstr ""
 msgid "extensions"
 msgstr "Extensii"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15304,6 +15404,9 @@ msgstr "capteaza imaginea ca bitmap"
 msgid "green"
 msgstr "verde"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -15318,6 +15421,9 @@ msgid "help..."
 msgstr "ajutor..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16073,6 +16179,10 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "asteapta mmi..."
 
 msgid "wait for mmi..."
 msgstr "asteapta mmi..."
