--- a/po/sr.po
+++ b/po/sr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -532,7 +532,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Aktivirajte aktuelnu konfiguraciju"
 
 #
@@ -550,6 +550,9 @@ msgstr "(prikaži alternativni DVD audio meni)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "Nepoznato"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2170,9 +2173,17 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Opšti interfejs"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "CI dodela"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "omogućeno"
 
 #
 #, fuzzy
@@ -3359,6 +3370,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "kopiraj u bukete"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Dugačka imena datoteka"
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3958,6 +3973,11 @@ msgstr "Obriši datoteku"
 
 msgid "Deleted items"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Obriši datoteku"
 
 msgid "Denmark"
 msgstr ""
@@ -4640,10 +4660,6 @@ msgstr "Konfiguracija tjunera"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "GREŠKA - neuspešno skeniranje (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6339,6 +6355,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Snimanje"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "nije podržano"
@@ -6439,6 +6458,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6942,6 +6964,16 @@ msgstr "Ulazni uređaji"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instaliram"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Unos Tajmera"
 
 #
 #, fuzzy
@@ -8280,6 +8312,11 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Pokreći na istok"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Pokreći na istok"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -9488,6 +9525,11 @@ msgstr "Pillarbox"
 #
 msgid "Pilot"
 msgstr "Pilot"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Uključi višestruke bukete"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10748,6 +10790,11 @@ msgstr "Kanali"
 msgid "Reload blacklists"
 msgstr "Ponovo učitaj Black-/Whitelists"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanali"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -11815,6 +11862,11 @@ msgstr "Izaberi izvor nadodradnje za uređivanje."
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Odaberi film"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Nadogradnja softvera"
 
@@ -12007,7 +12059,17 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Skeniranje Kanala"
+
+#
 msgid "Select service to add..."
+msgstr "Izaberi kanal za dodavanje..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Izaberi kanal za dodavanje..."
 
 #
@@ -12017,6 +12079,16 @@ msgstr "Izaberi lokaciju"
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Izaberi lokaciju"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Odaberi film"
 
 #
 #, fuzzy
@@ -12079,6 +12151,11 @@ msgstr "Izaberite putanju filma"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Izaberite putanju filma"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12245,6 +12322,16 @@ msgstr "Kanali"
 #, fuzzy
 msgid "Service ID"
 msgstr "Kanal"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Skeniranje Kanala"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Skeniranje Kanala"
 
 #
 #, fuzzy
@@ -13771,6 +13858,15 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Stream Type"
+msgstr "Nastaviti"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Ponovo unesi novi PIN"
+
 msgid "Stream request"
 msgstr ""
 
@@ -14487,6 +14583,11 @@ msgstr "Nema dostupnih ažuriranja."
 #
 msgid "There are currently no outstanding actions."
 msgstr "Trenutno nema izrazitih dešavanja."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Nema dostupnih ažuriranja."
 
 #
 #, fuzzy
@@ -15440,6 +15541,11 @@ msgid "Unpack to current folder"
 msgstr "prikaži proširene infor. "
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Uključi višestruke bukete"
+
+#
 msgid "Unsupported"
 msgstr "Nepodržano"
 
@@ -15575,6 +15681,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Koristi prolaz"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "dodaj alternative"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15617,6 +15728,11 @@ msgstr "Koristi merenje snage"
 #, fuzzy
 msgid "Use skin default"
 msgstr "standardne postavke stila liste"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Uredi alternative"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16246,6 +16362,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17430,6 +17549,9 @@ msgstr ""
 msgid "extensions"
 msgstr "proširenja."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17544,6 +17666,9 @@ msgstr "Postavite ovaj frejm kao bitmapu"
 msgid "green"
 msgstr "zeleno"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -17560,6 +17685,9 @@ msgid "help..."
 msgstr "pomoć..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18437,6 +18565,11 @@ msgstr "vertikalno"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "čekam mmi..."
 
 #
 msgid "wait for mmi..."
