--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:34+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2021-01-11 15:15+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -467,7 +467,7 @@ msgstr ""
 msgid "(activated +%d min)"
 msgstr ""
 
-msgid "(current)"
+msgid "(current image)"
 msgstr ""
 
 msgid "(empty)"
@@ -480,6 +480,9 @@ msgid "(show optional DVD audio menu)"
 msgstr ""
 
 msgid "(unknown)"
+msgstr ""
+
+msgid "* = Restart Required"
 msgstr ""
 
 msgid "* Only available if more than one interface is active."
@@ -1731,7 +1734,13 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr ""
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
+msgstr ""
+
+msgid "CI enabled"
 msgstr ""
 
 msgid "CI slot: "
@@ -2731,6 +2740,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr ""
 
+msgid "Copying files"
+msgstr ""
+
 #, python-format
 msgid "Cores: %s"
 msgstr ""
@@ -3199,6 +3211,9 @@ msgid "Deleted image"
 msgstr ""
 
 msgid "Deleted items"
+msgstr ""
+
+msgid "Deleting files"
 msgstr ""
 
 msgid "Denmark"
@@ -3723,10 +3738,6 @@ msgstr ""
 
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
-msgstr ""
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -5074,6 +5085,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr ""
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5151,6 +5165,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -5570,6 +5587,13 @@ msgid "Input devices"
 msgstr ""
 
 msgid "Insert"
+msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "输入服务密码"
+
+msgid "Insert entry"
 msgstr ""
 
 msgid "Insert line before current line"
@@ -6616,6 +6640,9 @@ msgstr ""
 msgid "Moving east..."
 msgstr ""
 
+msgid "Moving files"
+msgstr ""
+
 msgid "Moving to position"
 msgstr ""
 
@@ -7561,6 +7588,9 @@ msgid "Pillarbox"
 msgstr ""
 
 msgid "Pilot"
+msgstr ""
+
+msgid "Pin Userbouquet"
 msgstr ""
 
 msgid "Pitcairn"
@@ -8517,6 +8547,9 @@ msgstr ""
 msgid "Reload blacklists"
 msgstr ""
 
+msgid "Reload services/bouquets list"
+msgstr ""
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -9337,6 +9370,9 @@ msgstr ""
 msgid "Select OPKG source....."
 msgstr ""
 
+msgid "Select Service"
+msgstr ""
+
 msgid "Select Software Update"
 msgstr ""
 
@@ -9476,13 +9512,25 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+msgid "Select service name"
+msgstr ""
+
 msgid "Select service to add..."
+msgstr ""
+
+msgid "Select service type"
 msgstr ""
 
 msgid "Select slot"
 msgstr ""
 
 msgid "Select sort method:"
+msgstr ""
+
+msgid "Select stream URL"
+msgstr ""
+
+msgid "Select stream type"
 msgstr ""
 
 msgid "Select target folder"
@@ -9537,6 +9585,9 @@ msgid "Select the shifted character set"
 msgstr ""
 
 msgid "Select the shifted character set for the next character only"
+msgstr ""
+
+msgid "Select the timer from the fallback tuner by default"
 msgstr ""
 
 msgid "Select the tuner that controls the motorised dish."
@@ -9663,6 +9714,12 @@ msgid "Service & PIDs"
 msgstr ""
 
 msgid "Service ID"
+msgstr ""
+
+msgid "Service Name"
+msgstr ""
+
+msgid "Service Type"
 msgstr ""
 
 msgid "Service belongs to a parental protected bouquet"
@@ -10834,6 +10891,12 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+msgid "Stream URL"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -11394,6 +11457,9 @@ msgid "There are at least %d updates available."
 msgstr "有一个最近更新 %d 可用."
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 msgid "There are no saved playlists to delete!"
@@ -12181,6 +12247,9 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+msgid "Unpin Userbouquet"
+msgstr ""
+
 msgid "Unsupported"
 msgstr ""
 
@@ -12298,6 +12367,9 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+msgid "Use alternative skin"
+msgstr ""
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -12332,6 +12404,9 @@ msgid "Use power measurement"
 msgstr ""
 
 msgid "Use skin default"
+msgstr ""
+
+msgid "Use the alternative screen"
 msgstr ""
 
 msgid "Use the cursor keys to select an installed image and then Start button."
@@ -12826,6 +12901,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -13858,6 +13936,9 @@ msgstr ""
 msgid "extensions"
 msgstr ""
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -13948,6 +14029,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -13961,6 +14045,9 @@ msgid "help..."
 msgstr ""
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -14669,6 +14756,9 @@ msgid "vertical"
 msgstr ""
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 msgid "wait for mmi..."
