--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:34+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2021-01-11 15:15+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -466,7 +466,7 @@ msgstr ""
 msgid "(activated +%d min)"
 msgstr ""
 
-msgid "(current)"
+msgid "(current image)"
 msgstr ""
 
 msgid "(empty)"
@@ -479,6 +479,9 @@ msgid "(show optional DVD audio menu)"
 msgstr ""
 
 msgid "(unknown)"
+msgstr ""
+
+msgid "* = Restart Required"
 msgstr ""
 
 msgid "* Only available if more than one interface is active."
@@ -1726,7 +1729,13 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr ""
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
+msgstr ""
+
+msgid "CI enabled"
 msgstr ""
 
 msgid "CI slot: "
@@ -2725,6 +2734,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr ""
 
+msgid "Copying files"
+msgstr ""
+
 #, python-format
 msgid "Cores: %s"
 msgstr ""
@@ -3193,6 +3205,9 @@ msgid "Deleted image"
 msgstr ""
 
 msgid "Deleted items"
+msgstr ""
+
+msgid "Deleting files"
 msgstr ""
 
 msgid "Denmark"
@@ -3716,10 +3731,6 @@ msgstr ""
 
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
-msgstr ""
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -5067,6 +5078,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr ""
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5144,6 +5158,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -5563,6 +5580,13 @@ msgid "Input devices"
 msgstr ""
 
 msgid "Insert"
+msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "輸入密碼"
+
+msgid "Insert entry"
 msgstr ""
 
 msgid "Insert line before current line"
@@ -6609,6 +6633,9 @@ msgstr ""
 msgid "Moving east..."
 msgstr ""
 
+msgid "Moving files"
+msgstr ""
+
 msgid "Moving to position"
 msgstr ""
 
@@ -7554,6 +7581,9 @@ msgid "Pillarbox"
 msgstr ""
 
 msgid "Pilot"
+msgstr ""
+
+msgid "Pin Userbouquet"
 msgstr ""
 
 msgid "Pitcairn"
@@ -8510,6 +8540,9 @@ msgstr ""
 msgid "Reload blacklists"
 msgstr ""
 
+msgid "Reload services/bouquets list"
+msgstr ""
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -9330,6 +9363,9 @@ msgstr ""
 msgid "Select OPKG source....."
 msgstr ""
 
+msgid "Select Service"
+msgstr ""
+
 msgid "Select Software Update"
 msgstr ""
 
@@ -9469,13 +9505,25 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+msgid "Select service name"
+msgstr ""
+
 msgid "Select service to add..."
+msgstr ""
+
+msgid "Select service type"
 msgstr ""
 
 msgid "Select slot"
 msgstr ""
 
 msgid "Select sort method:"
+msgstr ""
+
+msgid "Select stream URL"
+msgstr ""
+
+msgid "Select stream type"
 msgstr ""
 
 msgid "Select target folder"
@@ -9530,6 +9578,9 @@ msgid "Select the shifted character set"
 msgstr ""
 
 msgid "Select the shifted character set for the next character only"
+msgstr ""
+
+msgid "Select the timer from the fallback tuner by default"
 msgstr ""
 
 msgid "Select the tuner that controls the motorised dish."
@@ -9656,6 +9707,12 @@ msgid "Service & PIDs"
 msgstr ""
 
 msgid "Service ID"
+msgstr ""
+
+msgid "Service Name"
+msgstr ""
+
+msgid "Service Type"
 msgstr ""
 
 msgid "Service belongs to a parental protected bouquet"
@@ -10827,6 +10884,12 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+msgid "Stream URL"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -11387,6 +11450,9 @@ msgid "There are at least %d updates available."
 msgstr ""
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 msgid "There are no saved playlists to delete!"
@@ -12172,6 +12238,9 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+msgid "Unpin Userbouquet"
+msgstr ""
+
 msgid "Unsupported"
 msgstr ""
 
@@ -12289,6 +12358,9 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+msgid "Use alternative skin"
+msgstr ""
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -12323,6 +12395,9 @@ msgid "Use power measurement"
 msgstr ""
 
 msgid "Use skin default"
+msgstr ""
+
+msgid "Use the alternative screen"
 msgstr ""
 
 msgid "Use the cursor keys to select an installed image and then Start button."
@@ -12817,6 +12892,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -13849,6 +13927,9 @@ msgstr ""
 msgid "extensions"
 msgstr ""
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -13939,6 +14020,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -13952,6 +14036,9 @@ msgid "help..."
 msgstr ""
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -14660,6 +14747,9 @@ msgid "vertical"
 msgstr ""
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 msgid "wait for mmi..."
