--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -551,7 +551,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "تنشيط التكوين الحالى"
 
 msgid "(empty)"
@@ -566,6 +566,9 @@ msgstr "(شاهد قائمه صوت دى فى دى إختياريه)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "غير معروف"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "*متاحه فقط عند وجود أكثر من واحهه نشطه"
@@ -2063,9 +2066,16 @@ msgstr "سى"
 msgid "CI (Common Interface) Setup"
 msgstr "وحده النفاذ المشروط"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr ""
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "تم النفعيل"
 
 msgid "CI slot: "
 msgstr ""
@@ -3159,6 +3169,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "نسخ الى الباقات"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "فحص ملفات النظام...."
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "سرعة العوده للخلف"
@@ -3700,6 +3714,10 @@ msgstr "حذف الملف"
 
 msgid "Deleted items"
 msgstr ""
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "حذف الملف"
 
 msgid "Denmark"
 msgstr ""
@@ -4322,10 +4340,6 @@ msgstr "تهيئة الموالف"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "خطأ - فشل البحث (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -5892,6 +5906,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "تسجيل"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "غير مدعم"
@@ -5985,6 +6002,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6457,6 +6477,15 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "جارى التثبيت"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "إدخال المؤقت"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7707,6 +7736,10 @@ msgstr ""
 msgid "Moving east..."
 msgstr "تحرك شرقا"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "تحرك شرقا"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -8835,6 +8868,11 @@ msgstr "عمود مربع"
 msgid "Pilot"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "تفعيل باقات متعدده"
+
 msgid "Pitcairn"
 msgstr ""
 
@@ -9959,6 +9997,11 @@ msgstr "القنوات/الخدمات"
 msgid "Reload blacklists"
 msgstr "إعادة تحميل القائمه السوداء/البيضاء"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "القنوات/الخدمات"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -10924,6 +10967,11 @@ msgstr "أختار"
 msgid "Select OPKG source....."
 msgstr "أختار مصدر الترقيه المراد تحريره"
 
+#
+#, fuzzy
+msgid "Select Service"
+msgstr "اختار الفيلم"
+
 #, fuzzy
 msgid "Select Software Update"
 msgstr "ترقية البرنامج التشغيلى"
@@ -11098,7 +11146,16 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Select service name"
+msgstr "بخث عن القنوات"
+
 msgid "Select service to add..."
+msgstr "اختار قناه ليتم إضافتها"
+
+#, fuzzy
+msgid "Select service type"
 msgstr "اختار قناه ليتم إضافتها"
 
 #, fuzzy
@@ -11107,6 +11164,15 @@ msgstr "أختار الموقع"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "أختار الموقع"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "اختار الفيلم"
 
 #
 #, fuzzy
@@ -11166,6 +11232,10 @@ msgstr "أختار مسار الفيلم"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "أختار مسار الفيلم"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -11318,6 +11388,16 @@ msgstr "القنوات/الخدمات"
 #, fuzzy
 msgid "Service ID"
 msgstr "قناه/خدمه"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "بخث عن القنوات"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "بخث عن القنوات"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -12752,6 +12832,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "قناه"
+
 msgid "Stream request"
 msgstr ""
 
@@ -13426,6 +13514,10 @@ msgstr "هناك على الأقل %d تحديثات متاحة."
 #
 msgid "There are currently no outstanding actions."
 msgstr ""
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "لا يوجد تحديثات متاحه ."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -14326,6 +14418,11 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "إظهار تفاصيل الحدث"
 
+#
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "تفعيل باقات متعدده"
+
 msgid "Unsupported"
 msgstr "غير مدعم"
 
@@ -14463,6 +14560,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "إضافة بدائل"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -14502,6 +14603,10 @@ msgstr "استخدم قـياس الطاقه"
 #, fuzzy
 msgid "Use skin default"
 msgstr "إستعادة النسخه الإحتياطيه "
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "تحرير البدائل"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15075,6 +15180,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16182,6 +16290,9 @@ msgstr ""
 msgid "extensions"
 msgstr "الاضافات"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -16285,6 +16396,9 @@ msgstr ""
 msgid "green"
 msgstr "أخضر"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -16300,6 +16414,9 @@ msgid "help..."
 msgstr "مساعده..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -17107,6 +17224,11 @@ msgstr "رأسى"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "mmi إنتظار"
 
 #
 msgid "wait for mmi..."
