--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -507,7 +507,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Configuració del sintonitzador"
 
 #
@@ -525,6 +525,9 @@ msgstr ""
 #, fuzzy
 msgid "(unknown)"
 msgstr "<desconegut>"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2075,9 +2078,17 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr "Interfície comuna"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr ""
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "activat"
 
 msgid "CI slot: "
 msgstr ""
@@ -3216,6 +3227,9 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "copiar a les llistes"
 
+msgid "Copying files"
+msgstr ""
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3799,6 +3813,11 @@ msgstr "Ha fallat l'eliminació!"
 
 msgid "Deleted items"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Ha fallat l'eliminació!"
 
 msgid "Denmark"
 msgstr ""
@@ -4460,10 +4479,6 @@ msgstr "Configuració del sintonitzador"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - ha fallat la recerca (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6106,6 +6121,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Gravant"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -6204,6 +6222,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6693,6 +6714,16 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instal·lant"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Gravació"
 
 msgid "Insert line before current line"
 msgstr ""
@@ -7959,6 +7990,11 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Moure a l'est"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Moure a l'est"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -9142,6 +9178,11 @@ msgstr ""
 #
 msgid "Pilot"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Activar llistes múltiples"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10358,6 +10399,11 @@ msgstr "Canals"
 msgid "Reload blacklists"
 msgstr "llista negra"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Canals"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -11397,6 +11443,11 @@ msgstr "Seleccionar una pel·lícula"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Seleccionar una pel·lícula"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Seleccionar una pel·lícula"
 
@@ -11589,8 +11640,18 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Recerca de canal"
+
+#
 msgid "Select service to add..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select service type"
+msgstr "Tipus d'escaneig de canals usat"
 
 #
 #, fuzzy
@@ -11599,6 +11660,16 @@ msgstr "Selecció EPG"
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Selecció EPG"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Seleccionar una pel·lícula"
 
 #
 #, fuzzy
@@ -11661,6 +11732,11 @@ msgstr "Seleccionar una pel·lícula"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Seleccionar una pel·lícula"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -11808,6 +11884,16 @@ msgstr "Canals"
 #, fuzzy
 msgid "Service ID"
 msgstr "Canal"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Recerca de canal"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Recerca de canal"
 
 #
 #, fuzzy
@@ -13280,6 +13366,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "Canal"
+
 msgid "Stream request"
 msgstr ""
 
@@ -13944,6 +14038,9 @@ msgstr "Hi ha almenys %d actualitzacions disponibles."
 
 #
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #
@@ -14857,6 +14954,11 @@ msgid "Unpack to current folder"
 msgstr "mostrar detalls del programa"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Activar llistes múltiples"
+
+#
 msgid "Unsupported"
 msgstr ""
 
@@ -14991,6 +15093,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Utilitzar una porta d'enllaç"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "afegir alternatives"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15033,6 +15140,11 @@ msgstr "Utilitza les mesures de corrent"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Restaurar"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "editar alternatives"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15621,6 +15733,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16767,6 +16882,9 @@ msgstr ""
 msgid "extensions"
 msgstr "Extensions"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -16877,6 +16995,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -16893,6 +17014,9 @@ msgid "help..."
 msgstr "ajuda..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -17759,6 +17883,9 @@ msgid "vertical"
 msgstr "vertical"
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 #
