--- a/po/et.po
+++ b/po/et.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -487,7 +487,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Jõusta praegused seaded"
 
 msgid "(empty)"
@@ -503,6 +503,9 @@ msgstr "(näita DVD valikulist audio-menüüd)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "tundmatu"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Enam kui ühe aktiivse liidese puhul."
@@ -1890,8 +1893,15 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "CI liides"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "CI määrangud"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "lubatud"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2959,6 +2969,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "kopeeri nimekirjadesse"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Kopeeri"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Tagasikerimise kiirused"
@@ -3474,6 +3488,10 @@ msgstr "Kustuta fail"
 
 msgid "Deleted items"
 msgstr "Prügikast"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Kustuta fail"
 
 msgid "Denmark"
 msgstr ""
@@ -4060,10 +4078,6 @@ msgstr "Tuuneri seaded"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "VIGA - otsing nurjus (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Ida"
@@ -5543,6 +5557,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Salvestus"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "pole toetatud"
@@ -5633,6 +5650,9 @@ msgid "Hidden network"
 msgstr "Varjatud võrk"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6086,6 +6106,14 @@ msgstr "Sisendseadmed"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Paigaldamine"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Taimeri sisestus"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7216,6 +7244,10 @@ msgstr "Liikuv"
 msgid "Moving east..."
 msgstr "Keerab itta ..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Liiguta itta"
+
 msgid "Moving to position"
 msgstr "Liigub asukohta"
 
@@ -8274,6 +8306,10 @@ msgstr "Pillarbox"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Luba lemmiknimekirjad"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9339,6 +9375,10 @@ msgid "Reload blacklists"
 msgstr "Lae uuesti Must-/Valge nimekiri"
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanalid"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Lemmiknimekirjade ja kanalite värskendamine..."
 
@@ -10246,6 +10286,10 @@ msgid "Select OPKG source....."
 msgstr "Vali uuenduste allikas"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Vali film"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Tarkvara uuendamine"
 
@@ -10403,7 +10447,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Kanalinimi"
+
 msgid "Select service to add..."
+msgstr "Vali kanal lisamiseks"
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Vali kanal lisamiseks"
 
 #, fuzzy
@@ -10412,6 +10464,14 @@ msgstr "Vali asukoht"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Vali asukoht"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Vali tuuner"
 
 msgid "Select target folder"
 msgstr "Vali sihtkataloog"
@@ -10468,6 +10528,10 @@ msgstr "Vali filmi rada"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Vali filmi rada"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10611,6 +10675,14 @@ msgstr "Kanalid"
 #, fuzzy
 msgid "Service ID"
 msgstr "Kanaliinfo"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Kanalinimi"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Kanalinimi"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11905,6 +11977,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr "Viiteaeg puudub"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Striimi päring"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Korda uut PIN-i"
+
 msgid "Stream request"
 msgstr "Striimi päring"
 
@@ -12527,6 +12607,10 @@ msgstr "Saadaval on vähemalt %d uuendust."
 
 msgid "There are currently no outstanding actions."
 msgstr "Praegu ei ole täitmata tegevusi."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Uuendusi ei ole saadaval."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13374,6 +13458,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "Näita saatetutvustust"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Luba lemmiknimekirjad"
+
 msgid "Unsupported"
 msgstr "Pole toetatud"
 
@@ -13497,6 +13585,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Kasuta lüüsi"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "valikute lisamine"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13534,6 +13626,10 @@ msgstr "Kasuta võimsuse mõõtmist"
 #, fuzzy
 msgid "Use skin default"
 msgstr "nimekirja stiil: vaikeseaded"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "lisavõimaluste lisamine ja kustutamine"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14088,6 +14184,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Määrates 'jah', kasutab vastuvõtja automaatselt varem valitud heliriba."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15193,6 +15292,9 @@ msgstr "eksperimentaalne film/video"
 msgid "extensions"
 msgstr " laiendused."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15291,6 +15393,9 @@ msgstr "salvesta see kaader bitmapina"
 msgid "green"
 msgstr "roheline"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "käsitöö"
 
@@ -15305,6 +15410,9 @@ msgid "help..."
 msgstr "abi"
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16065,6 +16173,10 @@ msgstr "vertikaal"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "mmi ootel..."
 
 msgid "wait for mmi..."
 msgstr "mmi ootel..."
