--- a/po/fa.po
+++ b/po/fa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -474,7 +474,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "اضافه کردن پیکربندی شبکه؟"
 
 msgid "(empty)"
@@ -489,6 +489,9 @@ msgstr "(نمایش منوی اختیای صدای DVD)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "<نامشخص>"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -1903,9 +1906,16 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "رابط مشترک"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "CI وظیفه"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "فعال"
 
 msgid "CI slot: "
 msgstr ""
@@ -2986,6 +2996,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "اضافه کردن به لیست"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "رونوشت"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "سرعت های بازگشت:"
@@ -3516,6 +3530,10 @@ msgstr "حذف ناموفق"
 
 msgid "Deleted items"
 msgstr "موارد حذف شده"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "حذف ناموفق"
 
 msgid "Denmark"
 msgstr ""
@@ -4102,10 +4120,6 @@ msgstr "پیکربندی شبکه"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "خطا ، اسکن انجام نشد (%s)"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "شرق"
@@ -5611,6 +5625,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "در حال ضبط"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -5698,6 +5715,9 @@ msgid "Hidden network"
 msgstr "شبکه مخفی"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6157,6 +6177,14 @@ msgstr "وسیله های ورودی"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "در حال نصب"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "حذف مورد"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7326,6 +7354,10 @@ msgstr "در حال جابجایی"
 msgid "Moving east..."
 msgstr "جابجایی به شرق"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "جابجایی به شرق"
+
 msgid "Moving to position"
 msgstr "در حال جابجایی به موقعیت"
 
@@ -8396,6 +8428,10 @@ msgstr "Pillarbox"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "فعال کردن چندین لیست"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9478,6 +9514,10 @@ msgid "Reload blacklists"
 msgstr "بازنگری لیست سفید و سیاه"
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "کانال ها"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "بارگذاری مجدد لیست ها و کانال ها"
 
@@ -10395,6 +10435,10 @@ msgstr "انتخاب"
 msgid "Select OPKG source....."
 msgstr "انتخاب منبع به روز رسانی برای ویرایش"
 
+#, fuzzy
+msgid "Select Service"
+msgstr "انتخاب فیلم"
+
 #
 #, fuzzy
 msgid "Select Software Update"
@@ -10561,7 +10605,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "نام وسیله:"
+
 msgid "Select service to add..."
+msgstr "انتخاب کانال برای اضافه شدن"
+
+#, fuzzy
+msgid "Select service type"
 msgstr "انتخاب کانال برای اضافه شدن"
 
 #, fuzzy
@@ -10570,6 +10622,14 @@ msgstr "انتخاب محل"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "انتخاب محل"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "انتخاب فیلم"
 
 #, fuzzy
 msgid "Select target folder"
@@ -10628,6 +10688,10 @@ msgstr "لطفا مسیر فیلم را انتخاب کنید"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "لطفا مسیر فیلم را انتخاب کنید"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10775,6 +10839,14 @@ msgstr "کانال ها"
 #, fuzzy
 msgid "Service ID"
 msgstr "کانال"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "نام وسیله:"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "نام وسیله:"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -12127,6 +12199,14 @@ msgstr "درخواست جریان"
 msgid "Stream Relay delay"
 msgstr "بدون تاخیر"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "درخواست جریان"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "درخواست جریان"
+
 msgid "Stream request"
 msgstr "درخواست جریان"
 
@@ -12759,6 +12839,9 @@ msgid "There are at least %d updates available."
 msgstr "به روز رسانی های در دسترس"
 
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #, fuzzy
@@ -13570,6 +13653,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "منوی تنظیمات"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "فعال کردن چندین لیست"
+
 msgid "Unsupported"
 msgstr ""
 
@@ -13688,6 +13775,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr ""
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "حالت رادیو متناوب"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13725,6 +13816,10 @@ msgstr ""
 #, fuzzy
 msgid "Use skin default"
 msgstr "بازگردانی نسخه های پشتیبان"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "حالت رادیو متناوب"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14250,6 +14345,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15315,6 +15413,9 @@ msgstr ""
 msgid "extensions"
 msgstr "بسته ها"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15411,6 +15512,9 @@ msgstr ""
 msgid "green"
 msgstr ""
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -15424,6 +15528,9 @@ msgid "help..."
 msgstr ""
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16180,6 +16287,9 @@ msgid "vertical"
 msgstr ""
 
 msgid "violet"
+msgstr ""
+
+msgid "wait for ci..."
 msgstr ""
 
 msgid "wait for mmi..."
