--- a/po/fy.po
+++ b/po/fy.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -513,7 +513,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Dizze ynstellingen aktief meitsje"
 
 #
@@ -531,6 +531,9 @@ msgstr "(opsje DVD lûd menu sjen litte)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "<net bekend>"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2130,9 +2133,17 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Common Interface"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr ""
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "ynskeakele"
 
 msgid "CI slot: "
 msgstr ""
@@ -3297,6 +3308,11 @@ msgid "Copy to bouquets"
 msgstr "kopieer nei boeketten"
 
 #
+#, fuzzy
+msgid "Copying files"
+msgstr "Bestânsysteem neisjen"
+
+#
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Werom spiel faasje"
@@ -3895,6 +3911,11 @@ msgstr "triem ferwiderje"
 
 msgid "Deleted items"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "triem ferwiderje"
 
 msgid "Denmark"
 msgstr ""
@@ -4563,10 +4584,6 @@ msgstr "Tuner ynstellingen"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Flater - Sykjen mislearre (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6242,6 +6259,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "An it opnimmen"
 
+msgid "HDMI-In"
+msgstr ""
+
 msgid "HDR10 support"
 msgstr ""
 
@@ -6340,6 +6360,9 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6841,6 +6864,16 @@ msgstr ""
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Oan it ynstallearjen"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Tiidsbarren item"
 
 #
 #, fuzzy
@@ -8148,6 +8181,11 @@ msgstr ""
 msgid "Moving east..."
 msgstr "Draai nei east"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Draai nei east"
+
 msgid "Moving to position"
 msgstr ""
 
@@ -9349,6 +9387,11 @@ msgstr "Pillar box"
 #
 msgid "Pilot"
 msgstr "Pilot"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Mear boeketten sjen litte"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10602,6 +10645,11 @@ msgstr "Kanalen"
 msgid "Reload blacklists"
 msgstr "swarte lyst"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanalen"
+
 msgid "Reloading EPG Cache..."
 msgstr ""
 
@@ -11651,6 +11699,11 @@ msgstr "Kies fideo moadus"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Kies in film"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Kies faasje fan fernije"
 
@@ -11843,8 +11896,18 @@ msgid "Select secondary softcam"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Kanaal sykje"
+
+#
 msgid "Select service to add..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select service type"
+msgstr "Kies faasje fan fernije"
 
 #
 #, fuzzy
@@ -11853,6 +11916,16 @@ msgstr "Kies Lokaasje"
 
 msgid "Select sort method:"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Kies Lokaasje"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Kies in film"
 
 #
 #, fuzzy
@@ -11915,6 +11988,11 @@ msgstr "kies it film paad"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "kies it film paad"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12063,6 +12141,16 @@ msgstr "Kanalen"
 #, fuzzy
 msgid "Service ID"
 msgstr "Kanaal ynfo"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Kanaal sykje"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Kanaal sykje"
 
 #
 #, fuzzy
@@ -13564,6 +13652,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr ""
 
+msgid "Stream Type"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "Kanaal"
+
 msgid "Stream request"
 msgstr ""
 
@@ -14262,6 +14358,9 @@ msgstr ""
 
 #
 msgid "There are currently no outstanding actions."
+msgstr ""
+
+msgid "There are no items currently available for this screen."
 msgstr ""
 
 #
@@ -15211,6 +15310,11 @@ msgid "Unpack to current folder"
 msgstr "EPG details sjen litte"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Mear boeketten sjen litte"
+
+#
 msgid "Unsupported"
 msgstr ""
 
@@ -15345,6 +15449,11 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "In gateway brûke"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "alernatief tafoegje"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15387,6 +15496,11 @@ msgstr "Fermogensmjitting brûke"
 #, fuzzy
 msgid "Use skin default"
 msgstr "lyst styl standert"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "bewurkje alternatief"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16011,6 +16125,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr ""
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17173,6 +17290,9 @@ msgstr ""
 msgid "extensions"
 msgstr "Utwreidingen"
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17287,6 +17407,9 @@ msgstr ""
 msgid "green"
 msgstr "grien"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr ""
 
@@ -17303,6 +17426,9 @@ msgid "help..."
 msgstr "help..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18174,6 +18300,11 @@ msgstr "ferticaal"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "wachtsje op mmi"
 
 #
 msgid "wait for mmi..."
