--- a/po/gl.po
+++ b/po/gl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2020-12-27 12:25+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
@@ -512,7 +512,7 @@ msgid "(activated +%d min)"
 msgstr "(activado +%d min)"
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "rañura %s - %s (imaxe actual)"
 
 #
@@ -528,6 +528,9 @@ msgstr "(amosar o menú opcional de son de DVD)"
 
 msgid "(unknown)"
 msgstr "(descoñecido)"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2042,9 +2045,18 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Axustes da CI (Interface Común)"
 
+#, fuzzy
+msgid "CI Boot Delay"
+msgstr "Retardo DVB CI"
+
 #
 msgid "CI assignment"
 msgstr "Asignación de CI"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "activado"
 
 msgid "CI slot: "
 msgstr "Rañura CI: "
@@ -3178,6 +3190,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "Copiar a buqués"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d ficheiro"
+
 #, python-format
 msgid "Cores: %s"
 msgstr ""
@@ -3737,6 +3753,11 @@ msgstr "Borrar imaxe"
 
 msgid "Deleted items"
 msgstr "Elementos borrados"
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Borrar ficheiro"
 
 msgid "Denmark"
 msgstr "Dinamarca"
@@ -4384,10 +4405,6 @@ msgstr "Configuración do sintonizador"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - fallou o escaneo (%s)!"
-
-#, fuzzy, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr "ERRO ao descargar o ficheiro %s"
 
 #
 msgid "East"
@@ -5951,6 +5968,10 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Gravando"
 
+#, fuzzy
+msgid "HDMI-In"
+msgstr "Configuración de HDMI-CEC"
+
 msgid "HDR10 support"
 msgstr "Soporte HDR10"
 
@@ -6043,6 +6064,9 @@ msgstr "Rede oculta"
 
 msgid "Hide"
 msgstr "Ocultar"
+
+msgid "Hide and confirm invalid key message"
+msgstr ""
 
 msgid "Hide channel list in radio mode"
 msgstr "Ocultar a lista de canles en modo radio"
@@ -6518,6 +6542,16 @@ msgstr "Dispositivos de entrada"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instalando"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Entrada do temporizador"
 
 #
 #, fuzzy
@@ -7761,6 +7795,10 @@ msgstr "Movendo"
 msgid "Moving east..."
 msgstr "Movendo cara o leste…"
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Mover PiP"
+
 msgid "Moving to position"
 msgstr "Movendo á posición"
 
@@ -8895,6 +8933,10 @@ msgstr "Pillarbox"
 #
 msgid "Pilot"
 msgstr "Piloto"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Cargar os buqués non enlazados"
 
 msgid "Pitcairn"
 msgstr "Illas Pitcairn"
@@ -10053,6 +10095,11 @@ msgstr "Servizos"
 msgid "Reload blacklists"
 msgstr "Recargas as listas negras"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Servizos"
+
 #, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Ruta ao ficheiro de caché da EPG"
@@ -11016,6 +11063,11 @@ msgstr "Seleccionar fonte de actualización"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Seleccionar película"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Actualización de software"
 
@@ -11185,7 +11237,17 @@ msgid "Select secondary softcam"
 msgstr "Seleccionar Softcam"
 
 #
+#, fuzzy
+msgid "Select service name"
+msgstr "Nome do servizo"
+
+#
 msgid "Select service to add..."
+msgstr "Seleccionar servizo para engadir…"
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Seleccionar servizo para engadir…"
 
 msgid "Select slot"
@@ -11193,6 +11255,15 @@ msgstr "Seleccionar rañura"
 
 msgid "Select sort method:"
 msgstr "Seleccionar método de ordenación:"
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Seleccionar rañura"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Seleccionar un sintonizador"
 
 #
 msgid "Select target folder"
@@ -11249,6 +11320,10 @@ msgstr "Seleccionar o conxunto de caracteres por desprazamento"
 
 msgid "Select the shifted character set for the next character only"
 msgstr "Seleccionar o conxunto de caracteres por desprazamento só para o seguinte carácter"
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Cando está activado, impórtanse os temporizadores desde o sintonizador de reserva"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Seleccionar o sintonizador que controla a antena motorizada."
@@ -11402,6 +11477,16 @@ msgstr "Servizo e PID"
 
 msgid "Service ID"
 msgstr "ID de servizo"
+
+#
+#, fuzzy
+msgid "Service Name"
+msgstr "Nome do servizo"
+
+#
+#, fuzzy
+msgid "Service Type"
+msgstr "Nome do servizo"
 
 msgid "Service belongs to a parental protected bouquet"
 msgstr "O servizo pertence a un buqué con protección paterna"
@@ -12760,6 +12845,14 @@ msgstr "Fluxo"
 msgid "Stream Relay delay"
 msgstr "Retardo no desprazamento"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Fluxo"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Fluxo"
+
 msgid "Stream request"
 msgstr "Solicitude de fluxo"
 
@@ -13438,6 +13531,11 @@ msgstr "Hai polo menos %d actualizacións dispoñibles."
 #
 msgid "There are currently no outstanding actions."
 msgstr "Neste momento non hai ninguna acción pendente."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Non hai actualizacións dispoñibles."
 
 #
 msgid "There are no saved playlists to delete!"
@@ -14362,6 +14460,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr ""
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Cargar os buqués non enlazados"
+
 #
 msgid "Unsupported"
 msgstr "Non soportado"
@@ -14490,6 +14592,11 @@ msgstr "Usar a información EPG de Virgin cando estea dispoñible."
 msgid "Use a gateway"
 msgstr "Usar unha porta de enlace"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "Engadir alternativas"
+
 msgid "Use as PiP if possible"
 msgstr "Usar como PiP se é posible"
 
@@ -14528,6 +14635,11 @@ msgstr "Usar medida de potencia"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Establecer valor predeterminado"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Editar alternativas"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -15137,6 +15249,10 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Cando está activado, o receptor utiliza automaticamente a pista de son que seleccionaches anteriormente."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr "Cando está activado, impórtanse os temporizadores desde o sintonizador de reserva"
+
+#, fuzzy
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr "Cando está activado, impórtanse os temporizadores desde o sintonizador de reserva"
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -16328,6 +16444,10 @@ msgstr "película/vídeo experimental"
 msgid "extensions"
 msgstr " extensións."
 
+#, fuzzy
+msgid "extra high"
+msgstr "extra ancho"
+
 msgid "extra wide"
 msgstr "extra ancho"
 
@@ -16439,6 +16559,9 @@ msgstr "coller esta pantalla como bitmap"
 msgid "green"
 msgstr "verde"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "artesanía"
 
@@ -16453,6 +16576,9 @@ msgid "help..."
 msgstr "axuda…"
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -17295,6 +17421,11 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr "violeta"
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "esperar polo nmi…"
 
 #
 msgid "wait for mmi..."
