--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2020-05-13 21:36+0200\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -487,7 +487,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Aktuális konfiguráció aktiválása"
 
 msgid "(empty)"
@@ -503,6 +503,9 @@ msgstr "(DVD audió menü megjelenítése, ha van)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "ismeretlen"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Csak akkor érvényes, ha egynél több interfész aktív."
@@ -1891,8 +1894,15 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "CI modulfogadó"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "CI hozzárendelés"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "engedélyezve"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2961,6 +2971,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "másolás a bouquetek-be"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d fájl"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Visza-tekerési sebességek"
@@ -3476,6 +3490,10 @@ msgstr "Törölt image"
 
 msgid "Deleted items"
 msgstr "Kuka"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "fájl törlése"
 
 msgid "Denmark"
 msgstr ""
@@ -4063,10 +4081,6 @@ msgstr "Tuner beállítások"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "HIBA - nem sikerült a keresés (%s)!"
-
-#, fuzzy, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr "HIBA a %s fájl letöltése során"
 
 msgid "East"
 msgstr "Kelet"
@@ -5554,6 +5568,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Felvétel"
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "nem támogatott"
@@ -5645,6 +5662,9 @@ msgid "Hidden network"
 msgstr "Rejtett hálózat"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6099,6 +6119,14 @@ msgstr "Beviteli eszközök"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Telepítés"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Időzítés megadása"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7227,6 +7255,10 @@ msgstr "Mozgatás"
 msgid "Moving east..."
 msgstr "Mozgatás kelet felé..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Cím eltávolítása"
+
 msgid "Moving to position"
 msgstr "Mozgatás erre: "
 
@@ -8290,6 +8322,10 @@ msgstr "Pillarbox (fekete csíkok oldalakon)"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Többszörös bouquetek engedélyezése"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9355,6 +9391,10 @@ msgid "Reload blacklists"
 msgstr "Fekete és fehérlisták újratöltése"
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Csatornák"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Bouquet-ek és csatornák újratöltése..."
 
@@ -10265,6 +10305,10 @@ msgid "Select OPKG source....."
 msgstr "Válasszon szerkesztendő frissítési forrást"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Felvétel kiválasztása"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Szoftver frissítés"
 
@@ -10422,7 +10466,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Csatornanév"
+
 msgid "Select service to add..."
+msgstr "Válasszon hozzáadandó csatornát..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Válasszon hozzáadandó csatornát..."
 
 #, fuzzy
@@ -10431,6 +10483,14 @@ msgstr "Válassza ki a helyet"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Válassza ki a helyet"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Felvétel kiválasztása"
 
 msgid "Select target folder"
 msgstr "Válassza ki a célmappaat"
@@ -10485,6 +10545,10 @@ msgstr "Váltás a virtuális billentyűzeten a 'shift' karakterkiosztásra"
 
 msgid "Select the shifted character set for the next character only"
 msgstr "Váltás a virtuális billentyűzeten a 'shift' karakterkiosztásra csak a következő karakterre vonatkozóan"
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Váltás a virtuális billentyűzeten a 'shift' karakterkiosztásra"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10628,6 +10692,14 @@ msgstr "Csatornák"
 #, fuzzy
 msgid "Service ID"
 msgstr "Csatorna információ"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Csatornanév"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Csatornanév"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11929,6 +12001,14 @@ msgstr "Adatfolyam"
 msgid "Stream Relay delay"
 msgstr "nincs késleltetés"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Adatfolyam"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Adatfolyam"
+
 msgid "Stream request"
 msgstr "Adatfolyam kérés"
 
@@ -12560,6 +12640,10 @@ msgstr "Legalább %d frissítés elérhető."
 
 msgid "There are currently no outstanding actions."
 msgstr "Semmilyen kiemelkedő esemény nem következik."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Nincs elérhető frissítés."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13410,6 +13494,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "részletes adatok megjelenítése"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Többszörös bouquetek engedélyezése"
+
 msgid "Unsupported"
 msgstr "Nem támogatott"
 
@@ -13534,6 +13622,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Átjáró használata"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "alternatívák hozzáadása"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13571,6 +13663,10 @@ msgstr "Teljesítmény-felvétel mérése"
 #, fuzzy
 msgid "Use skin default"
 msgstr "alapértelmezett lista stílus"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "alternatívák módosítása"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14126,6 +14222,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "A készülék ugyanazt a hangsávot fogja legközelebb is kiválasztani, amit Ön legutoljára kiválasztott."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15239,6 +15338,9 @@ msgstr "kísérleti filmezés"
 msgid "extensions"
 msgstr " bővítmény."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15336,6 +15438,9 @@ msgstr "pillanatkép mentése"
 msgid "green"
 msgstr "zöld"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "kézművesség"
 
@@ -15350,6 +15455,9 @@ msgid "help..."
 msgstr "Súgó..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16116,6 +16224,10 @@ msgstr "vertikális"
 
 msgid "violet"
 msgstr "ibolya"
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "várakozás mmi-re..."
 
 msgid "wait for mmi..."
 msgstr "várakozás mmi-re..."
