--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno\n"
 "Language-Team: \n"
@@ -480,7 +480,7 @@ msgid "(activated +%d min)"
 msgstr "(diaktifkan +%d mnt)"
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Aktifkan setelan saat ini"
 
 msgid "(empty)"
@@ -495,6 +495,9 @@ msgstr "(perlihatkan menu audio DVD yang bisa dipilih)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "tidak dikenal"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Hanya tersedia jika lebih dari satu antarmuka yang aktif."
@@ -1871,8 +1874,16 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Pengaturan CI (Common Interface)"
 
+#, fuzzy
+msgid "CI Boot Delay"
+msgstr "Tunda CI DVB"
+
 msgid "CI assignment"
 msgstr "penetapan CI"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "aktifkan"
 
 msgid "CI slot: "
 msgstr "slot CI"
@@ -2928,6 +2939,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "salin ke buket"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d berkas"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "%s/%s: %s"
@@ -3441,6 +3456,10 @@ msgstr "Hapus pewaktu"
 
 msgid "Deleted items"
 msgstr "Item dihapus"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Hapus file"
 
 msgid "Denmark"
 msgstr ""
@@ -4028,10 +4047,6 @@ msgstr "Penyetelan..."
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Kesalahan - gagal melacak (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Timur"
@@ -5513,6 +5528,10 @@ msgid "HDMI-IN Recording settings"
 msgstr "Recording"
 
 #, fuzzy
+msgid "HDMI-In"
+msgstr "Pengaturan HDMI-CEC"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "tidak didukung"
 
@@ -5601,6 +5620,9 @@ msgid "Hidden network"
 msgstr "Hidden network"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6053,6 +6075,14 @@ msgstr "Perangkat Input"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Installing"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Timer entry"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7177,6 +7207,10 @@ msgstr "Moving"
 msgid "Moving east..."
 msgstr "Moving east ..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Move east"
+
 msgid "Moving to position"
 msgstr "Moving to position"
 
@@ -8215,6 +8249,10 @@ msgstr "Pillarbox"
 msgid "Pilot"
 msgstr "Pilot"
 
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Muat buket pengguna yg tak terhubung"
+
 msgid "Pitcairn"
 msgstr ""
 
@@ -9241,6 +9279,10 @@ msgid "Reload blacklists"
 msgstr ""
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Layanan"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Reloading bouquets and services..."
 
@@ -10136,6 +10178,10 @@ msgid "Select OPKG source....."
 msgstr "Pilih sumber upgrade"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Pilih film"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Pembaruan Perangkat Lunak"
 
@@ -10292,7 +10338,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr "Pilih film"
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Nama kanal"
+
 msgid "Select service to add..."
+msgstr "Select service to add..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Select service to add..."
 
 msgid "Select slot"
@@ -10300,6 +10354,14 @@ msgstr ""
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Pembaruan Perangkat Lunak"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Pilih Penala"
 
 msgid "Select target folder"
 msgstr "Pilih folder tujuan"
@@ -10356,6 +10418,10 @@ msgstr "Select the movie path"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Select the movie path"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10499,6 +10565,14 @@ msgstr ""
 
 msgid "Service ID"
 msgstr ""
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Nama kanal"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Nama kanal"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11761,6 +11835,14 @@ msgstr "Stream"
 msgid "Stream Relay delay"
 msgstr ""
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Stream"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Stream"
+
 msgid "Stream request"
 msgstr "Stream request"
 
@@ -12372,6 +12454,10 @@ msgstr "Setidaknya terdapat %d pembaruan tersedia."
 
 msgid "There are currently no outstanding actions."
 msgstr "There are currently no outstanding actions."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "There are no updates available."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13218,6 +13304,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "Stop entry"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Muat buket pengguna yg tak terhubung"
+
 msgid "Unsupported"
 msgstr "Unsupported"
 
@@ -13340,6 +13430,10 @@ msgstr "Gunakan info EPG Virgin ketika tersedia."
 msgid "Use a gateway"
 msgstr "Use a gateway"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "tambahkan alternatif"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13376,6 +13470,10 @@ msgstr "Use power measurement"
 #, fuzzy
 msgid "Use skin default"
 msgstr "list style default"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "edit alternatives"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -13925,6 +14023,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Ketika diaktifkan, rx akan secara otomatis menggunakan jalur audio yang anda pilih sebelumnya."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15040,6 +15141,9 @@ msgstr "percobaan film/video"
 msgid "extensions"
 msgstr " ekstensi."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15136,6 +15240,9 @@ msgstr "grab this frame as bitmap"
 msgid "green"
 msgstr "green"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "handicraft"
 
@@ -15150,6 +15257,9 @@ msgid "help..."
 msgstr "Bantuan"
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -15908,6 +16018,10 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "wait for mmi..."
 
 msgid "wait for mmi..."
 msgstr "wait for mmi..."
