--- a/po/pl.po
+++ b/po/pl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2019-12-03 20:02+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -536,7 +536,7 @@ msgstr "(aktywny, +%d min)"
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Aktywuj aktualną konfigurację"
 
 #
@@ -554,6 +554,9 @@ msgstr "(pokaż opcjonalne menu audio DVD)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "Nieznany"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2166,9 +2169,17 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Moduł dostępu CI"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "Zadania CI"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "Włączone"
 
 #
 #, fuzzy
@@ -3352,6 +3363,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "Kopiuj do bukietów"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d plik"
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3941,6 +3956,11 @@ msgstr "Usuń timer"
 #
 msgid "Deleted items"
 msgstr "Usunięte pliki"
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Usuń plik"
 
 msgid "Denmark"
 msgstr ""
@@ -4630,10 +4650,6 @@ msgstr "Konfiguracja tunera"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "BŁĄD - skanowanie (%s) nie powiodło się!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Wschód"
@@ -6330,6 +6346,10 @@ msgid "HDMI-IN Recording settings"
 msgstr "Nagranie"
 
 #, fuzzy
+msgid "HDMI-In"
+msgstr "Ustawienia HDMI-CEC"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "Nieobsługiwany"
 
@@ -6432,6 +6452,9 @@ msgid "Hidden network"
 msgstr "Ukryta sieć"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6936,6 +6959,16 @@ msgstr "Urządzenia wejścia"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instalowanie"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Szczegóły timera"
 
 #
 #, fuzzy
@@ -8236,6 +8269,11 @@ msgstr "Dojazd"
 msgid "Moving east..."
 msgstr "Idzie na wscód"
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Przesuń na wschód"
+
 msgid "Moving to position"
 msgstr "Idzie na pozycję"
 
@@ -9457,6 +9495,11 @@ msgstr ""
 #
 msgid "Pilot"
 msgstr "Pilot"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Włącz tryb wielu bukietów"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10747,6 +10790,11 @@ msgstr "Przeładuj Black-/White lists"
 
 #
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanały"
+
+#
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Przeładowanie bukietów i kanałów"
 
@@ -11811,6 +11859,11 @@ msgstr "Wybierz źródło aktualizacji"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Wybierz film"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Aktualizacja oprogramowania"
 
@@ -12003,8 +12056,17 @@ msgstr "Wybierz satelity"
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Nazwa kanału"
+
 #
 msgid "Select service to add..."
+msgstr "Wybierz kanał do dodania..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Wybierz kanał do dodania..."
 
 #
@@ -12015,6 +12077,16 @@ msgstr "Wybierz lokalizację"
 #
 msgid "Select sort method:"
 msgstr "Sposób sortowania:"
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Wybierz lokalizację"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Wybierz tuner"
 
 #
 msgid "Select target folder"
@@ -12075,6 +12147,11 @@ msgstr "Wybierz ścieżkę do filmu"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Wybierz ścieżkę do filmu"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12243,6 +12320,14 @@ msgstr "Kanały"
 #, fuzzy
 msgid "Service ID"
 msgstr "O serwisie..."
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Nazwa kanału"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Nazwa kanału"
 
 #
 #, fuzzy
@@ -13741,6 +13826,16 @@ msgid "Stream Relay delay"
 msgstr "Brak"
 
 #
+#, fuzzy
+msgid "Stream Type"
+msgstr "Strumień"
+
+#
+#, fuzzy
+msgid "Stream URL"
+msgstr "Strumień"
+
+#
 msgid "Stream request"
 msgstr "Żądanie strumienia"
 
@@ -14455,6 +14550,11 @@ msgstr "Dostępnych co najmniej %d aktualizacji."
 #
 msgid "There are currently no outstanding actions."
 msgstr "Obecnie nie ma zaległych działań."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Brak dostępnych aktualizacji"
 
 #
 #, fuzzy
@@ -15399,6 +15499,11 @@ msgid "Unpack to current folder"
 msgstr "Aktualny tryb: %s \n"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Włącz tryb wielu bukietów"
+
+#
 msgid "Unsupported"
 msgstr "Nieobsługiwany"
 
@@ -15538,6 +15643,11 @@ msgstr "Użyj informacji EPG Virgin gdy dostępne."
 msgid "Use a gateway"
 msgstr "Użyj bramy"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "Dodaj alternatywne kanały"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15582,6 +15692,11 @@ msgstr "Użyj pomiaru mocy"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Ustaw domyślny"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Edytuj alternatywne kanały"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16215,6 +16330,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Gdy włączone, automatycznie zostanie włączona ścieżka audio ostatnio wybrana na danym kanale."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17435,6 +17553,9 @@ msgstr "Film eksprymentalny"
 msgid "extensions"
 msgstr " rozszerzenia."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17550,6 +17671,9 @@ msgstr "Zrób screenshot (.bmp)"
 msgid "green"
 msgstr "Zielony"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "Rękodzieło"
 
@@ -17567,6 +17691,9 @@ msgid "help..."
 msgstr "Pomoc..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18456,6 +18583,11 @@ msgstr "Pionowa (V)"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "Czekaj na MMI..."
 
 #
 msgid "wait for mmi..."
