--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -515,7 +515,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Activar configuração actual"
 
 #
@@ -534,6 +534,9 @@ msgstr "(mostrar menu áudio opcional do DVD)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "desconhecido"
+
+msgid "* = Restart Required"
+msgstr ""
 
 #
 msgid "* Only available if more than one interface is active."
@@ -2146,9 +2149,17 @@ msgstr "C"
 msgid "CI (Common Interface) Setup"
 msgstr "Interface Comum"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 #
 msgid "CI assignment"
 msgstr "Escolha de CI"
+
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "activo"
 
 #
 #, fuzzy
@@ -3348,6 +3359,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "copiar para bouquets"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d ficheiro"
+
 #
 #, fuzzy, python-format
 msgid "Cores: %s"
@@ -3937,6 +3952,11 @@ msgstr "Eliminar agendamento"
 
 msgid "Deleted items"
 msgstr "Items eliminados"
+
+#
+#, fuzzy
+msgid "Deleting files"
+msgstr "Eliminar ficheiro"
 
 msgid "Denmark"
 msgstr ""
@@ -4612,10 +4632,6 @@ msgstr "Configuração do sintonizador"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - falha na pesquisa (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 #
 msgid "East"
@@ -6299,6 +6315,10 @@ msgid "HDMI-IN Recording settings"
 msgstr "A gravar"
 
 #, fuzzy
+msgid "HDMI-In"
+msgstr "Configurações HDMI-CEC"
+
+#, fuzzy
 msgid "HDR10 support"
 msgstr "não suportado"
 
@@ -6400,6 +6420,9 @@ msgid "Hidden network"
 msgstr "Rede oculta"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6899,6 +6922,16 @@ msgstr "Dispositivos de entrada"
 
 msgid "Insert"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Insert Service"
+msgstr "A instalar"
+
+#
+#, fuzzy
+msgid "Insert entry"
+msgstr "Entrada de agendamento"
 
 #
 #, fuzzy
@@ -8218,6 +8251,11 @@ msgstr "A mover"
 msgid "Moving east..."
 msgstr "A mover para este ..."
 
+#
+#, fuzzy
+msgid "Moving files"
+msgstr "Mover este"
+
 msgid "Moving to position"
 msgstr "A mover para a posição"
 
@@ -9425,6 +9463,11 @@ msgstr "Pillarbox"
 #
 msgid "Pilot"
 msgstr "Piloto"
+
+#
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Activar Bouquets múltiplos"
 
 msgid "Pitcairn"
 msgstr ""
@@ -10696,6 +10739,11 @@ msgstr "Canais"
 msgid "Reload blacklists"
 msgstr "Recarregar listas pretas/brancas"
 
+#
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Canais"
+
 #, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "A recarregar a Lista de Canais..."
@@ -11762,6 +11810,11 @@ msgstr "Seleccionar fonte de actualizações"
 
 #
 #, fuzzy
+msgid "Select Service"
+msgstr "Seleccione um filme"
+
+#
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Actualização de software"
 
@@ -11948,8 +12001,17 @@ msgstr "Seleccione satélites"
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Nome do canal"
+
 #
 msgid "Select service to add..."
+msgstr "Seleccionar canal para adicionar..."
+
+#
+#, fuzzy
+msgid "Select service type"
 msgstr "Seleccionar canal para adicionar..."
 
 #
@@ -11959,6 +12021,16 @@ msgstr "Seleccione localização"
 
 msgid "Select sort method:"
 msgstr "Seleccione método de ordenação:"
+
+#
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Seleccione localização"
+
+#
+#, fuzzy
+msgid "Select stream type"
+msgstr "Seleccione um sintonizador"
 
 #
 #, fuzzy
@@ -12021,6 +12093,11 @@ msgstr "Seleccione o directório de gravações"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Seleccione o directório de gravações"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -12187,6 +12264,14 @@ msgstr "Canais"
 #, fuzzy
 msgid "Service ID"
 msgstr "Canal"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Nome do canal"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Nome do canal"
 
 #
 #, fuzzy
@@ -13688,6 +13773,14 @@ msgstr "Stream"
 msgid "Stream Relay delay"
 msgstr "Sem atraso"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Stream"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Stream"
+
 msgid "Stream request"
 msgstr "Pedido de Stream"
 
@@ -14395,6 +14488,11 @@ msgstr "Existem pelo menos %d actualizações disponíveis."
 #
 msgid "There are currently no outstanding actions."
 msgstr "Actualmente não existem acções pendentes."
+
+#
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Não existem actualizações disponíveis."
 
 #
 #, fuzzy
@@ -15350,6 +15448,11 @@ msgid "Unpack to current folder"
 msgstr "Modo actual: %s \n"
 
 #
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Activar Bouquets múltiplos"
+
+#
 msgid "Unsupported"
 msgstr "Não suportado"
 
@@ -15488,6 +15591,11 @@ msgstr "Usar informação Virgin EPG quando está disponível."
 msgid "Use a gateway"
 msgstr "Usar um gateway"
 
+#
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "adicionar alternativas"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -15530,6 +15638,11 @@ msgstr "Usar controlo da alimentação"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Definir como padrão"
+
+#
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "editar alternativas"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -16180,6 +16293,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Quando activado, o receptor irá usar a faixa de áudio que seleccionou antes automaticamente."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -17394,6 +17510,9 @@ msgstr "filme/vídeo experimental"
 msgid "extensions"
 msgstr " extensões."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -17511,6 +17630,9 @@ msgstr "usar este frame como bitmap"
 msgid "green"
 msgstr "verde"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "artesanato"
 
@@ -17527,6 +17649,9 @@ msgid "help..."
 msgstr "ajuda..."
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 #
@@ -18405,6 +18530,11 @@ msgstr "vertical"
 
 msgid "violet"
 msgstr ""
+
+#
+#, fuzzy
+msgid "wait for ci..."
+msgstr "aguarde pelo MMI..."
 
 #
 msgid "wait for mmi..."
