--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -488,7 +488,7 @@ msgid "(activated +%d min)"
 msgstr ""
 
 #, fuzzy
-msgid "(current)"
+msgid "(current image)"
 msgstr "Ativar configuração atual"
 
 msgid "(empty)"
@@ -504,6 +504,9 @@ msgstr "(exibir menu opcional de áudio do DVD)"
 #, fuzzy
 msgid "(unknown)"
 msgstr "Desconhecido"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Disponível apenas se houver mais de uma interface ativa."
@@ -1874,8 +1877,15 @@ msgstr ""
 msgid "CI (Common Interface) Setup"
 msgstr "Interface Comum (CI)"
 
+msgid "CI Boot Delay"
+msgstr ""
+
 msgid "CI assignment"
 msgstr "Definição de CI"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "Ativo"
 
 #, fuzzy
 msgid "CI slot: "
@@ -2946,6 +2956,10 @@ msgstr ""
 msgid "Copy to bouquets"
 msgstr "Copiar para grupo de favoritos"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "%d arquivo"
+
 #, fuzzy, python-format
 msgid "Cores: %s"
 msgstr "Velocidades de retorno"
@@ -3460,6 +3474,10 @@ msgstr "Remover arquivo"
 
 msgid "Deleted items"
 msgstr "Itens removidos"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Remover arquivo"
 
 msgid "Denmark"
 msgstr ""
@@ -4047,10 +4065,6 @@ msgstr "Configurar tuner"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - Falha na busca (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr ""
 
 msgid "East"
 msgstr "Leste"
@@ -5530,6 +5544,9 @@ msgstr ""
 msgid "HDMI-IN Recording settings"
 msgstr "Gravando..."
 
+msgid "HDMI-In"
+msgstr ""
+
 #, fuzzy
 msgid "HDR10 support"
 msgstr "Não suportado"
@@ -5620,6 +5637,9 @@ msgid "Hidden network"
 msgstr "Rede oculta"
 
 msgid "Hide"
+msgstr ""
+
+msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
@@ -6074,6 +6094,14 @@ msgstr "Dispositivos de entrada"
 
 msgid "Insert"
 msgstr ""
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Instalando..."
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Agendar"
 
 #, fuzzy
 msgid "Insert line before current line"
@@ -7203,6 +7231,10 @@ msgstr "Movendo..."
 msgid "Moving east..."
 msgstr "Movendo para leste..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Mover leste"
+
 msgid "Moving to position"
 msgstr "Movendo para a posição"
 
@@ -8264,6 +8296,10 @@ msgstr ""
 
 msgid "Pilot"
 msgstr "Piloto"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Ativar grupos favoritos múltiplos"
 
 msgid "Pitcairn"
 msgstr ""
@@ -9330,6 +9366,10 @@ msgid "Reload blacklists"
 msgstr "Recarregar lista negra/branca"
 
 #, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Serviços"
+
+#, fuzzy
 msgid "Reloading EPG Cache..."
 msgstr "Recarregando a lista de canais..."
 
@@ -10240,6 +10280,10 @@ msgid "Select OPKG source....."
 msgstr "Servidores de atualizações"
 
 #, fuzzy
+msgid "Select Service"
+msgstr "Selecione um vídeo"
+
+#, fuzzy
 msgid "Select Software Update"
 msgstr "Atualizar software"
 
@@ -10397,7 +10441,15 @@ msgstr ""
 msgid "Select secondary softcam"
 msgstr ""
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Serviço"
+
 msgid "Select service to add..."
+msgstr "Selecione o serviço para adicionar"
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Selecione o serviço para adicionar"
 
 #, fuzzy
@@ -10406,6 +10458,14 @@ msgstr "Selecione o caminho"
 
 msgid "Select sort method:"
 msgstr ""
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Selecione o caminho"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Selecione um tuner"
 
 msgid "Select target folder"
 msgstr "Selecione o diretório de destino"
@@ -10462,6 +10522,10 @@ msgstr "Selecione o diretório de gravações"
 
 msgid "Select the shifted character set for the next character only"
 msgstr ""
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Selecione o diretório de gravações"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
@@ -10604,6 +10668,14 @@ msgstr "Serviços"
 #, fuzzy
 msgid "Service ID"
 msgstr "Canal"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Serviço"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Serviço"
 
 #, fuzzy
 msgid "Service belongs to a parental protected bouquet"
@@ -11907,6 +11979,14 @@ msgstr ""
 msgid "Stream Relay delay"
 msgstr "Sem atraso"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Pedido de stream"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Repita a nova senha"
+
 msgid "Stream request"
 msgstr "Pedido de stream"
 
@@ -12528,6 +12608,10 @@ msgstr "Existem ao menos %d atualizações disponíveis."
 
 msgid "There are currently no outstanding actions."
 msgstr "Atualmente não existem ações pendentes."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Não existem plugins disponíveis."
 
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13378,6 +13462,10 @@ msgstr ""
 msgid "Unpack to current folder"
 msgstr "Exibir detalhes do evento"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Ativar grupos favoritos múltiplos"
+
 msgid "Unsupported"
 msgstr "Não suportado"
 
@@ -13502,6 +13590,10 @@ msgstr ""
 msgid "Use a gateway"
 msgstr "Usar um gateway"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "Adicionar alternativas"
+
 msgid "Use as PiP if possible"
 msgstr ""
 
@@ -13539,6 +13631,10 @@ msgstr "Usar controle da alimentação"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Lista normal"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Editar alternativas"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
@@ -14097,6 +14193,9 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Quando ativado, o receptor usará automaticamente a trilha de áudio selecionada anteriormente."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr ""
+
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr ""
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -15208,6 +15307,9 @@ msgstr "Filme/vídeo experimental "
 msgid "extensions"
 msgstr "extensões."
 
+msgid "extra high"
+msgstr ""
+
 msgid "extra wide"
 msgstr ""
 
@@ -15305,6 +15407,9 @@ msgstr "Usar esta imagem como bitmap"
 msgid "green"
 msgstr "Verde"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "Artesanato"
 
@@ -15319,6 +15424,9 @@ msgid "help..."
 msgstr "Ajuda"
 
 msgid "hide"
+msgstr ""
+
+msgid "high"
 msgstr ""
 
 msgid "horizontal"
@@ -16085,6 +16193,10 @@ msgstr "Vertical"
 
 msgid "violet"
 msgstr ""
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "Aguardando MMI..."
 
 msgid "wait for mmi..."
 msgstr "Aguardando MMI..."
