--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue (Apachi70)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"POT-Creation-Date: 2024-04-24 10:35+0200\n"
 "PO-Revision-Date: 2023-10-28 16:49+0200\n"
 "Last-Translator: Apachi70 (Openatv),(Teamblue) <teamblue@online.de,openatv@gmail.com>\n"
 "Language-Team: teamblue@t-online.de(apachi70)\n"
@@ -483,7 +483,8 @@ msgstr "(ZAP)"
 msgid "(activated +%d min)"
 msgstr "(etkinleştirildi +%d dk)"
 
-msgid "(current)"
+#, fuzzy
+msgid "(current image)"
 msgstr "Akım"
 
 msgid "(empty)"
@@ -497,6 +498,9 @@ msgstr "(opsiyonel DVD ses menüsünü göster)"
 
 msgid "(unknown)"
 msgstr "(Bilinmeyen)"
+
+msgid "* = Restart Required"
+msgstr ""
 
 msgid "* Only available if more than one interface is active."
 msgstr "* Yalnızca birden fazla arayüz olduğunda kullanılabilir."
@@ -1774,8 +1778,16 @@ msgstr "CI"
 msgid "CI (Common Interface) Setup"
 msgstr "CI (Ortak Arayüz) Kurulumu"
 
+#, fuzzy
+msgid "CI Boot Delay"
+msgstr "DVB CI Gecikmesi"
+
 msgid "CI assignment"
 msgstr "CI ataması"
+
+#, fuzzy
+msgid "CI enabled"
+msgstr "FCC etkin"
 
 msgid "CI slot: "
 msgstr "CI yuvası: "
@@ -2804,6 +2816,10 @@ msgstr "Kopya klasörü"
 msgid "Copy to bouquets"
 msgstr "Bukete kopyala"
 
+#, fuzzy
+msgid "Copying files"
+msgstr "Dosya kopyalamak"
+
 #, python-format
 msgid "Cores: %s"
 msgstr "Renkler: %s"
@@ -3275,6 +3291,10 @@ msgstr "Silinen image"
 
 msgid "Deleted items"
 msgstr "Silinmiş öğeler"
+
+#, fuzzy
+msgid "Deleting files"
+msgstr "Dosya sil"
 
 msgid "Denmark"
 msgstr "Danimarka"
@@ -3813,10 +3833,6 @@ msgstr "EPGRefresh Yapılandırması"
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "HATA - arama başarısız (%s)!"
-
-#, python-format
-msgid "ERROR downloading file %s/%s"
-msgstr "HATA dosyası indirilirken %s/%s"
 
 msgid "East"
 msgstr "Doğu"
@@ -5197,6 +5213,10 @@ msgstr "HDMI-IN Eylemleri"
 msgid "HDMI-IN Recording settings"
 msgstr "HDMI-IN Kayıt ayarları"
 
+#, fuzzy
+msgid "HDMI-In"
+msgstr "HDMI"
+
 msgid "HDR10 support"
 msgstr "HDR10 desteği"
 
@@ -5276,6 +5296,9 @@ msgstr "Gizlenmiş ağ"
 
 msgid "Hide"
 msgstr "Gizle"
+
+msgid "Hide and confirm invalid key message"
+msgstr ""
 
 msgid "Hide channel list in radio mode"
 msgstr "Radyo modunda kanal listesini gizle"
@@ -5704,6 +5727,14 @@ msgstr "Giriş aygıtları"
 
 msgid "Insert"
 msgstr "Ekle"
+
+#, fuzzy
+msgid "Insert Service"
+msgstr "Servis yükleniyor"
+
+#, fuzzy
+msgid "Insert entry"
+msgstr "Zamanlayıcı girişi"
 
 msgid "Insert line before current line"
 msgstr "Geçerli satırdan önce satır ekle"
@@ -6755,6 +6786,10 @@ msgstr "Taşınıyor"
 msgid "Moving east..."
 msgstr "Doğuya hareket..."
 
+#, fuzzy
+msgid "Moving files"
+msgstr "Dosyayı taşı"
+
 msgid "Moving to position"
 msgstr "Hareket pozisyonu"
 
@@ -7718,6 +7753,10 @@ msgstr "Posta Kutusu"
 
 msgid "Pilot"
 msgstr "Pilot"
+
+#, fuzzy
+msgid "Pin Userbouquet"
+msgstr "Bağlantısız userbouquets yükle"
 
 msgid "Pitcairn"
 msgstr "Pitcairn"
@@ -8701,6 +8740,10 @@ msgstr "Kanalları Yeniden Yükle"
 msgid "Reload blacklists"
 msgstr "Kara listeyi yeniden yükle"
 
+#, fuzzy
+msgid "Reload services/bouquets list"
+msgstr "Kanalları Yeniden Yükle"
+
 msgid "Reloading EPG Cache..."
 msgstr "EPG Cache Reloading ..."
 
@@ -9520,6 +9563,10 @@ msgstr "HDD seçin"
 msgid "Select OPKG source....."
 msgstr "OPKG kaynağını seçin ....."
 
+#, fuzzy
+msgid "Select Service"
+msgstr "Film seç"
+
 msgid "Select Software Update"
 msgstr "Yazılım Güncelleme Seç"
 
@@ -9659,7 +9706,15 @@ msgstr "Uyduları seç"
 msgid "Select secondary softcam"
 msgstr "İkincil Softcam seçin"
 
+#, fuzzy
+msgid "Select service name"
+msgstr "Kanal adı"
+
 msgid "Select service to add..."
+msgstr "Eklenecek kanalı seçin..."
+
+#, fuzzy
+msgid "Select service type"
 msgstr "Eklenecek kanalı seçin..."
 
 msgid "Select slot"
@@ -9667,6 +9722,14 @@ msgstr "Yuva seçin"
 
 msgid "Select sort method:"
 msgstr "Sıralama yöntemini seç:"
+
+#, fuzzy
+msgid "Select stream URL"
+msgstr "Yuva seçin"
+
+#, fuzzy
+msgid "Select stream type"
+msgstr "Bir tuner seçin"
 
 msgid "Select target folder"
 msgstr "Hedef klasörü seçin"
@@ -9721,6 +9784,10 @@ msgstr "Kaydırılan karakter kümesini seçin"
 
 msgid "Select the shifted character set for the next character only"
 msgstr "Yalnızca sonraki karakter için kaydırılmış karakter kümesini seçin"
+
+#, fuzzy
+msgid "Select the timer from the fallback tuner by default"
+msgstr "Etkinleştirildiğinde, yedek tunerden gelen zamanlayıcı içe aktarılır"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Motorlu çanağı kontrol eden tuneri seçin."
@@ -9850,6 +9917,14 @@ msgstr "Kanal & PIDs"
 
 msgid "Service ID"
 msgstr "Kanal Kimliği"
+
+#, fuzzy
+msgid "Service Name"
+msgstr "Kanal adı"
+
+#, fuzzy
+msgid "Service Type"
+msgstr "Kanal adı"
 
 msgid "Service belongs to a parental protected bouquet"
 msgstr "Hizmet ebeveyn korumalı bir bukete aittir"
@@ -11037,6 +11112,14 @@ msgstr "Akış"
 msgid "Stream Relay delay"
 msgstr "Kaydırma gecikmesi"
 
+#, fuzzy
+msgid "Stream Type"
+msgstr "Akış"
+
+#, fuzzy
+msgid "Stream URL"
+msgstr "Akış"
+
 msgid "Stream request"
 msgstr "Akış isteği"
 
@@ -11643,6 +11726,10 @@ msgstr "Yeni %d güncellemeler bulundu."
 
 msgid "There are currently no outstanding actions."
 msgstr "Seçilmiş bir görev yok."
+
+#, fuzzy
+msgid "There are no items currently available for this screen."
+msgstr "Yeni güncelleme yok."
 
 msgid "There are no saved playlists to delete!"
 msgstr "Silmek için kayıtlı oynatma listesi yok!"
@@ -12460,6 +12547,10 @@ msgstr "Paketini açın %s"
 msgid "Unpack to current folder"
 msgstr "Mevcut klasöre aç"
 
+#, fuzzy
+msgid "Unpin Userbouquet"
+msgstr "Bağlantısız userbouquets yükle"
+
 msgid "Unsupported"
 msgstr "Desteklenmiyor"
 
@@ -12576,6 +12667,10 @@ msgstr "Uygun olduğunda Virgin EPG bilgilerini kullan."
 msgid "Use a gateway"
 msgstr "Ağ geçidi kullan"
 
+#, fuzzy
+msgid "Use alternative skin"
+msgstr "Alternatif ekleyin"
+
 msgid "Use as PiP if possible"
 msgstr "Mümkünse PiP olarak kullan"
 
@@ -12612,6 +12707,10 @@ msgstr "Güç kullanımını ölç"
 #, fuzzy
 msgid "Use skin default"
 msgstr "Varsayılanları ayarla"
+
+#, fuzzy
+msgid "Use the alternative screen"
+msgstr "Alternatifleri düzenle"
 
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr "Yüklenmiş bir Image seçmek için imleç tuşlarını ve ardından Başlat düğmesini kullanın."
@@ -13136,6 +13235,10 @@ msgid "When enabled the receiver will automatically wake from standby when the T
 msgstr "Etkinleştirildiğinde, TV açıldığında alıcı otomatik olarak bekleme modundan çıkar."
 
 msgid "When enabled the timer from the fallback tuner is imported"
+msgstr "Etkinleştirildiğinde, yedek tunerden gelen zamanlayıcı içe aktarılır"
+
+#, fuzzy
+msgid "When enabled the timer from the fallback tuner is the default timer"
 msgstr "Etkinleştirildiğinde, yedek tunerden gelen zamanlayıcı içe aktarılır"
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
@@ -14239,6 +14342,10 @@ msgstr "deneysel film / video"
 msgid "extensions"
 msgstr "eklentiler"
 
+#, fuzzy
+msgid "extra high"
+msgstr "ekstra geniş"
+
 msgid "extra wide"
 msgstr "ekstra geniş"
 
@@ -14329,6 +14436,9 @@ msgstr "bu çerçeveyi bitmap olarak yakala"
 msgid "green"
 msgstr "yeşil"
 
+msgid "half an hour"
+msgstr ""
+
 msgid "handicraft"
 msgstr "el sanatı"
 
@@ -14343,6 +14453,9 @@ msgstr "yardım..."
 
 msgid "hide"
 msgstr "saklamak"
+
+msgid "high"
+msgstr ""
 
 msgid "horizontal"
 msgstr "yatay (h)"
@@ -15061,6 +15174,10 @@ msgstr "düşey (v)"
 
 msgid "violet"
 msgstr "mor"
+
+#, fuzzy
+msgid "wait for ci..."
+msgstr "mmi bekleniyor..."
 
 msgid "wait for mmi..."
 msgstr "mmi bekleniyor..."
